@@ -9,7 +9,11 @@
 package org.sosy_lab.cpachecker.cfa.parser.eclipse.c;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
+import static com.google.common.base.Verify.verify;
 import static org.sosy_lab.common.collect.Collections3.transformedImmutableListCopy;
+import static org.sosy_lab.cpachecker.cfa.ast.c.CFunctionCallStatement.createNoArgsFunctionCall;
+import static org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration.ATOMIC_BEGIN_DECLARATION;
+import static org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration.ATOMIC_END_DECLARATION;
 
 import com.google.common.base.Preconditions;
 import com.google.common.base.Strings;
@@ -28,7 +32,9 @@ import java.util.EnumSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.logging.Level;
+import org.checkerframework.checker.nullness.qual.NonNull;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.eclipse.cdt.core.dom.ast.IASTArrayDeclarator;
 import org.eclipse.cdt.core.dom.ast.IASTArrayModifier;
@@ -161,6 +167,7 @@ import org.sosy_lab.cpachecker.cfa.types.c.CProblemType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cfa.types.c.CTypedefType;
 import org.sosy_lab.cpachecker.cfa.types.c.CTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CVoidType;
@@ -329,11 +336,14 @@ class ASTConverter {
       ParseContext pParseContext,
       MachineModel pMachineModel,
       String pStaticVariablePrefix,
-      Sideassignments pSideAssignmentStack) {
+      Sideassignments pSideAssignmentStack,
+      Set<FileLocation> pUnhandledAtomicOccurrences) {
     options = pOptions;
     scope = pScope;
     logger = pLogger;
-    typeConverter = new ASTTypeConverter(scope, this, pStaticVariablePrefix, pParseContext);
+    typeConverter =
+        new ASTTypeConverter(
+            scope, this, pStaticVariablePrefix, pParseContext, pUnhandledAtomicOccurrences);
     literalConverter = new ASTLiteralConverter(pMachineModel, pParseContext);
     operatorConverter = new ASTOperatorConverter(pParseContext);
     parseContext = pParseContext;
@@ -356,17 +366,17 @@ class ASTConverter {
     } else if (node instanceof CFunctionCallExpression funcCall) {
       return addSideassignmentsForFunctionCallExpressions(funcCall, e);
 
-    } else if (e instanceof IASTUnaryExpression
-        && (((IASTUnaryExpression) e).getOperator() == IASTUnaryExpression.op_postFixDecr
-            || ((IASTUnaryExpression) e).getOperator() == IASTUnaryExpression.op_postFixIncr)) {
+    } else if (e instanceof IASTUnaryExpression iASTUnaryExpression
+        && (iASTUnaryExpression.getOperator() == IASTUnaryExpression.op_postFixDecr
+            || iASTUnaryExpression.getOperator() == IASTUnaryExpression.op_postFixIncr)) {
       return addSideAssignmentsForUnaryExpressions(
           ((CAssignment) node).getLeftHandSide(),
           node.getFileLocation(),
           ((CBinaryExpression) ((CAssignment) node).getRightHandSide()).getOperator());
 
-    } else if (node instanceof CAssignment) {
+    } else if (node instanceof CAssignment cAssignment) {
       sideAssignmentStack.addPreSideAssignment(node);
-      return ((CAssignment) node).getLeftHandSide();
+      return cAssignment.getLeftHandSide();
 
     } else {
       throw new AssertionError("unknown expression " + node);
@@ -432,75 +442,76 @@ class ASTConverter {
     CAstNode converted = convertExpressionWithSideEffectsNotSimplified(e);
     if (converted == null
         || !options.simplifyConstExpressions()
-        || !(converted instanceof CExpression)) {
+        || !(converted instanceof CExpression cExpression)) {
       return converted;
     }
 
-    return simplifyExpressionOneStep((CExpression) converted);
+    return simplifyExpressionOneStep(cExpression);
   }
 
-  private CAstNode convertExpressionWithSideEffectsNotSimplified(IASTExpression e) {
-    if (e == null) {
-      return null;
+  private @Nullable CAstNode convertExpressionWithSideEffectsNotSimplified(
+      @Nullable IASTExpression e) {
+    return switch (e) {
+      case null -> null;
 
-    } else if (e instanceof IASTArraySubscriptExpression) {
-      return convert((IASTArraySubscriptExpression) e);
+      case IASTArraySubscriptExpression iASTArraySubscriptExpression ->
+          convert(iASTArraySubscriptExpression);
 
-    } else if (e instanceof IASTBinaryExpression) {
-      return convert((IASTBinaryExpression) e);
+      case IASTBinaryExpression iASTBinaryExpression -> convert(iASTBinaryExpression);
 
-    } else if (e instanceof IASTCastExpression) {
-      return convert((IASTCastExpression) e);
+      case IASTCastExpression iASTCastExpression -> convert(iASTCastExpression);
 
-    } else if (e instanceof IASTFieldReference) {
-      return convert((IASTFieldReference) e);
+      case IASTFieldReference iASTFieldReference -> convert(iASTFieldReference);
 
-    } else if (e instanceof IASTFunctionCallExpression) {
-      return convert((IASTFunctionCallExpression) e);
+      case IASTFunctionCallExpression iASTFunctionCallExpression ->
+          convert(iASTFunctionCallExpression);
 
-    } else if (e instanceof IASTIdExpression) {
-      CExpression exp = convert((IASTIdExpression) e);
-      CType type = exp.getExpressionType();
-
-      // this id expression is the name of a function. When there is no
-      // functionCallExpressionn or unaryexpression with pointertype and operator.Amper
-      // around it, we create it.
-      if (type instanceof CFunctionType
-          && !(isFunctionCallNameExpression(e) || isAddressOfArgument(e))) {
-        exp =
-            new CUnaryExpression(
-                exp.getFileLocation(),
-                new CPointerType(type.isConst(), type.isVolatile(), type),
-                exp,
-                UnaryOperator.AMPER);
+      case IASTIdExpression iASTIdExpression -> {
+        CExpression exp = convert(iASTIdExpression);
+        CType type = exp.getExpressionType();
+        // This id expression is the name of a function. If it's not part of a function call, it
+        // must be used as a function pointer, and we add an '&' in front of it (unless there
+        // already is one). Note that no '&' is added if the id is the operand of a sizeOf or
+        // alignOf operator
+        // See §6.3.2.1 (4) in the C11 standard for details
+        if (type instanceof CFunctionType
+            && !(isFunctionCallNameExpression(e)
+                || isAddressOfArgument(e)
+                || isSizeOfArgument(e)
+                || isAlignOfArgument(e))) {
+          exp =
+              new CUnaryExpression(
+                  exp.getFileLocation(),
+                  new CPointerType(type.getQualifiers(), type),
+                  exp,
+                  UnaryOperator.AMPER);
+        }
+        yield exp;
       }
-      return exp;
+      case IASTLiteralExpression iASTLiteralExpression -> {
+        final CType type = typeConverter.convert(e.getExpressionType());
+        yield literalConverter.convert(iASTLiteralExpression, type, getLocation(e));
+      }
+      case IASTUnaryExpression iASTUnaryExpression -> convert(iASTUnaryExpression);
 
-    } else if (e instanceof IASTLiteralExpression) {
-      final CType type = typeConverter.convert(e.getExpressionType());
-      return literalConverter.convert((IASTLiteralExpression) e, type, getLocation(e));
+      case IASTTypeIdExpression iASTTypeIdExpression -> convert(iASTTypeIdExpression);
 
-    } else if (e instanceof IASTUnaryExpression) {
-      return convert((IASTUnaryExpression) e);
+      case IASTTypeIdInitializerExpression iASTTypeIdInitializerExpression ->
+          convert(iASTTypeIdInitializerExpression);
 
-    } else if (e instanceof IASTTypeIdExpression) {
-      return convert((IASTTypeIdExpression) e);
+      case IASTConditionalExpression iASTConditionalExpression ->
+          convert(iASTConditionalExpression);
 
-    } else if (e instanceof IASTTypeIdInitializerExpression) {
-      return convert((IASTTypeIdInitializerExpression) e);
+      case IGNUASTCompoundStatementExpression iGNUASTCompoundStatementExpression ->
+          convert(iGNUASTCompoundStatementExpression);
 
-    } else if (e instanceof IASTConditionalExpression) {
-      return convert((IASTConditionalExpression) e);
+      case IASTExpressionList iASTExpressionList ->
+          convertExpressionListAsExpression(iASTExpressionList);
 
-    } else if (e instanceof IGNUASTCompoundStatementExpression) {
-      return convert((IGNUASTCompoundStatementExpression) e);
-
-    } else if (e instanceof IASTExpressionList) {
-      return convertExpressionListAsExpression((IASTExpressionList) e);
-
-    } else {
-      throw parseContext.parseError("Unknown expression type " + e.getClass().getSimpleName(), e);
-    }
+      default ->
+          throw parseContext.parseError(
+              "Unknown expression type " + e.getClass().getSimpleName(), e);
+    };
   }
 
   /**
@@ -528,6 +539,20 @@ class ASTConverter {
     return currentNode.getParent() instanceof IASTUnaryExpression unaryOpParent
         && currentNode.getPropertyInParent() == IASTUnaryExpression.OPERAND
         && unaryOpParent.getOperator() == IASTUnaryExpression.op_amper;
+  }
+
+  private boolean isSizeOfArgument(IASTExpression e) {
+    IASTNode currentNode = reAddParentheses(e);
+    return currentNode.getParent() instanceof IASTUnaryExpression unaryOpParent
+        && currentNode.getPropertyInParent() == IASTUnaryExpression.OPERAND
+        && unaryOpParent.getOperator() == IASTUnaryExpression.op_sizeof;
+  }
+
+  private boolean isAlignOfArgument(IASTExpression e) {
+    IASTNode currentNode = reAddParentheses(e);
+    return currentNode.getParent() instanceof IASTUnaryExpression unaryOpParent
+        && currentNode.getPropertyInParent() == IASTUnaryExpression.OPERAND
+        && unaryOpParent.getOperator() == IASTUnaryExpression.op_alignOf;
   }
 
   enum Condition {
@@ -636,13 +661,22 @@ class ASTConverter {
   }
 
   private boolean isZero(CExpression exp) {
-    if (exp instanceof CIntegerLiteralExpression) {
-      BigInteger value = ((CIntegerLiteralExpression) exp).getValue();
+    if (exp instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
+      BigInteger value = cIntegerLiteralExpression.getValue();
       return value.equals(BigInteger.ZERO);
     }
-    if (exp instanceof CCharLiteralExpression) {
-      char value = ((CCharLiteralExpression) exp).getCharacter();
+    if (exp instanceof CCharLiteralExpression cCharLiteralExpression) {
+      char value = cCharLiteralExpression.getCharacter();
       return value == 0;
+    }
+    return false;
+  }
+
+  /** Check whether the given expression is a local variable. */
+  private boolean isLocalVariable(CExpression exp) {
+    if (exp instanceof CIdExpression cIdExpression
+        && cIdExpression.getDeclaration() instanceof CVariableDeclaration cVariableDeclaration) {
+      return !cVariableDeclaration.isGlobal();
     }
     return false;
   }
@@ -654,15 +688,15 @@ class ASTConverter {
    */
   private BigInteger evaluateIntegerConstantExpression(IASTExpression exp) {
     CAstNode n = convertExpressionWithSideEffectsNotSimplified(exp);
-    if (!(n instanceof CExpression)) {
+    if (!(n instanceof CExpression cExpression)) {
       throw parseContext.parseError("Constant expression with side effect", exp);
     }
 
-    CExpression e = simplifyExpressionRecursively((CExpression) n);
-    if (e instanceof CIntegerLiteralExpression) {
-      return ((CIntegerLiteralExpression) e).getValue();
-    } else if (e instanceof CCharLiteralExpression) {
-      return BigInteger.valueOf(((CCharLiteralExpression) e).getCharacter());
+    CExpression e = simplifyExpressionRecursively(cExpression);
+    if (e instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
+      return cIntegerLiteralExpression.getValue();
+    } else if (e instanceof CCharLiteralExpression cCharLiteralExpression) {
+      return BigInteger.valueOf(cCharLiteralExpression.getCharacter());
     } else {
       throw parseContext.parseError("Integer constant expression could not be evaluated", n);
     }
@@ -687,13 +721,13 @@ class ASTConverter {
 
     // Eclipse CDT has a bug in determining the result type if the array type is a typedef.
     CType resultType = arrayExpr.getExpressionType();
-    while (resultType instanceof CTypedefType) {
-      resultType = ((CTypedefType) resultType).getRealType();
+    while (resultType instanceof CTypedefType typedefType) {
+      resultType = typedefType.getRealType();
     }
-    if (resultType instanceof CArrayType) {
-      resultType = ((CArrayType) resultType).getType();
-    } else if (resultType instanceof CPointerType) {
-      resultType = ((CPointerType) resultType).getType();
+    if (resultType instanceof CArrayType arrayType) {
+      resultType = arrayType.getType();
+    } else if (resultType instanceof CPointerType pointerType) {
+      resultType = pointerType.getType();
     } else if (resultType instanceof CTypedefType || resultType instanceof CProblemType) {
       // TODO probably we should throw exception,
       // but for now we delegate to Eclipse CDT and see whether it knows better than we do
@@ -736,9 +770,9 @@ class ASTConverter {
 
       // workaround for strange CDT behaviour
     } else if (type instanceof CProblemType) {
-      if (e instanceof IASTConditionalExpression) {
+      if (e instanceof IASTConditionalExpression iASTConditionalExpression) {
         return typeConverter.convert(
-            ((IASTConditionalExpression) e).getNegativeResultExpression().getExpressionType());
+            iASTConditionalExpression.getNegativeResultExpression().getExpressionType());
       } else if (e instanceof IGNUASTCompoundStatementExpression statementExpression) {
         // manually ceck whether type of compundStatementExpression is void
         IASTStatement[] statements = statementExpression.getCompoundStatement().getStatements();
@@ -754,7 +788,7 @@ class ASTConverter {
                 ((IASTExpressionStatement) lastStatement).getExpression();
             return convertType(lastExpression);
           } else {
-            return CVoidType.create(false, false);
+            return CVoidType.VOID;
           }
         }
       }
@@ -801,7 +835,10 @@ class ASTConverter {
 
     // If there is no initializer, the variable cannot be const.
     // For others, we add it as our temporary variables are single-use.
-    CType type = CTypes.withConstSetTo(pType, initializer != null);
+    CType type =
+        pType instanceof CProblemType
+            ? pType
+            : pType.withQualifiersSetTo(pType.getQualifiers().withConstSetTo(initializer != null));
 
     if (type instanceof CArrayType && !(initializer instanceof CInitializerList)) {
       // Replace with pointer type.
@@ -809,10 +846,10 @@ class ASTConverter {
       // that array types of operands are converted to pointer types except in a very few
       // specific cases (for which there will never be a temporary variable).
       // However, if the initializer is for an array, then of course we need to keep the array type.
-      type = new CPointerType(type.isConst(), type.isVolatile(), ((CArrayType) type).getType());
+      type = new CPointerType(type.getQualifiers(), ((CArrayType) type).getType());
     } else if (type instanceof CFunctionType) {
       // Happens if function pointers are used in ternary expressions, for example.
-      type = new CPointerType(false, false, type);
+      type = new CPointerType(CTypeQualifiers.NONE, type);
     }
 
     CVariableDeclaration decl =
@@ -861,14 +898,13 @@ class ASTConverter {
     CExpression leftHandSide = convertExpressionWithoutSideEffects(e.getOperand1());
 
     if (isAssign) {
-      if (!(leftHandSide instanceof CLeftHandSide)) {
+      if (!(leftHandSide instanceof CLeftHandSide lhs)) {
         throw parseContext.parseError(
             "Lefthandside of Assignment "
                 + e.getRawSignature()
                 + " is no CLeftHandside but should be.",
             leftHandSide);
       }
-      CLeftHandSide lhs = (CLeftHandSide) leftHandSide;
 
       if (op == null) {
         // a = b
@@ -876,31 +912,42 @@ class ASTConverter {
             convertExpressionWithSideEffects(
                 e.getOperand2()); // right-hand side may have a function call
 
-        if (rightHandSide instanceof CExpression) {
-          // a = b
-          return new CExpressionAssignmentStatement(fileLoc, lhs, (CExpression) rightHandSide);
-
-        } else if (rightHandSide instanceof CFunctionCallExpression) {
-          // a = f()
-          return new CFunctionCallAssignmentStatement(
-              fileLoc, lhs, (CFunctionCallExpression) rightHandSide);
-
-        } else if (rightHandSide instanceof CAssignment) {
-          sideAssignmentStack.addPreSideAssignment(rightHandSide);
-          return new CExpressionAssignmentStatement(
-              fileLoc, lhs, ((CAssignment) rightHandSide).getLeftHandSide());
-        } else {
-          throw parseContext.parseError("Expression is not free of side effects", e);
-        }
+        return switch (rightHandSide) {
+          case CExpression cExpression -> /* a = b */
+              new CExpressionAssignmentStatement(fileLoc, lhs, cExpression);
+          case CFunctionCallExpression cFunctionCallExpression -> /* a = f() */
+              new CFunctionCallAssignmentStatement(fileLoc, lhs, cFunctionCallExpression);
+          case CAssignment cAssignment -> {
+            sideAssignmentStack.addPreSideAssignment(rightHandSide);
+            yield new CExpressionAssignmentStatement(fileLoc, lhs, cAssignment.getLeftHandSide());
+          }
+          default -> throw parseContext.parseError("Expression is not free of side effects", e);
+        };
 
       } else {
-        // a += b etc.
+        // a += b, a *= b etc.
         CExpression rightHandSide = convertExpressionWithoutSideEffects(e.getOperand2());
 
-        // first create expression "a + b"
-        CBinaryExpression exp = buildBinaryExpression(leftHandSide, rightHandSide, op);
+        // C11 _Atomic compound assignments (+=, -=, etc.) must appear inside an atomic
+        // section so that concurrent analyses treat the read-modify-write as indivisible.
+        // see https://en.cppreference.com/w/c/language/atomic.html
+        if (lhs.getExpressionType().isAtomic() && !isLocalVariable(lhs)) {
+          // If a has an atomic type, a += b is transformed to
+          // atomic_begin(); a = a + b; atomic_end();
+          CBinaryExpression exp = buildBinaryExpression(lhs, rightHandSide, op);
+          CExpressionAssignmentStatement result =
+              new CExpressionAssignmentStatement(fileLoc, lhs, exp);
 
-        // and now the assignment
+          sideAssignmentStack.addPreSideAssignment(
+              createNoArgsFunctionCall(lhs.getFileLocation(), ATOMIC_BEGIN_DECLARATION));
+          sideAssignmentStack.addPreSideAssignment(result);
+          sideAssignmentStack.addPreSideAssignment(
+              createNoArgsFunctionCall(lhs.getFileLocation(), ATOMIC_END_DECLARATION));
+
+          return lhs;
+        }
+
+        CBinaryExpression exp = buildBinaryExpression(lhs, rightHandSide, op);
         return new CExpressionAssignmentStatement(fileLoc, lhs, exp);
       }
 
@@ -920,15 +967,15 @@ class ASTConverter {
   }
 
   private static boolean isPointerToVoid(final IASTExpression e) {
-    return (e.getExpressionType() instanceof IPointerType)
-        && ((IPointerType) e.getExpressionType()).getType() instanceof IBasicType
-        && ((IBasicType) ((IPointerType) e.getExpressionType()).getType()).getKind() == Kind.eVoid;
+    return (e.getExpressionType() instanceof IPointerType iPointerType)
+        && iPointerType.getType() instanceof IBasicType iBasicType
+        && iBasicType.getKind() == Kind.eVoid;
   }
 
   private static boolean isRightHandSide(final IASTExpression e) {
-    return e.getParent() instanceof IASTBinaryExpression
-        && ((IASTBinaryExpression) e.getParent()).getOperator() == IASTBinaryExpression.op_assign
-        && ((IASTBinaryExpression) e.getParent()).getOperand2() == e;
+    return e.getParent() instanceof IASTBinaryExpression iASTBinaryExpression
+        && iASTBinaryExpression.getOperator() == IASTBinaryExpression.op_assign
+        && iASTBinaryExpression.getOperand2() == e;
   }
 
   private CAstNode convert(IASTCastExpression e) {
@@ -972,14 +1019,86 @@ class ASTConverter {
       return new CComplexCastExpression(loc, castType, operand, castType, true);
     }
 
-    if (options.simplifyPointerExpressions()
-        && e.getOperand() instanceof IASTFieldReference
-        && ((IASTFieldReference) e.getOperand()).isPointerDereference()) {
+    // Cast-to-union extension (GCC): initialize the union member whose type is an exact match of
+    // the operand's type.
+    // https://gcc.gnu.org/onlinedocs/gcc/Cast-to-Union.html
+    // We found out, that 'match' means exact type match in this case through our own experiments.
+    // Lower this to a designated initializer stored in a temporary variable.
+    CAstNode loweredUnionCast = tryLowerGccCastToUnion(loc, castType, operand);
+    if (loweredUnionCast != null) {
+      return loweredUnionCast;
+    } else if (options.simplifyPointerExpressions()
+        && e.getOperand() instanceof IASTFieldReference iASTFieldReference
+        && iASTFieldReference.isPointerDereference()) {
       return createTemporaryVariableWithInitializer(
           loc, new CCastExpression(loc, castType, operand));
     } else {
       return new CCastExpression(loc, castType, operand);
     }
+  }
+
+  /**
+   * Try to lower a GCC cast-to-union extension into a temporary union value initialized with a
+   * designated initializer. Returns {@code null} if this cast is not a cast to a union type.
+   *
+   * <p>GCC extension: (U)expr is valid iff {@code expr}'s type is an exact match of a direct union
+   * member type. If no member matches (or the union is empty), this method throws a {@link
+   * CFAGenerationRuntimeException}.
+   */
+  private @Nullable CAstNode tryLowerGccCastToUnion(
+      FileLocation loc, CType castType, CExpression castOperand) {
+
+    if (!(castType.getCanonicalType() instanceof CCompositeType compositeType)
+        || compositeType.getKind() != ComplexTypeKind.UNION) {
+      return null;
+    }
+
+    if (compositeType.getMembers().isEmpty()) {
+      throw new CFAGenerationRuntimeException("Invalid cast to empty union type at " + loc);
+    }
+
+    CType operandType = castOperand.getExpressionType().getCanonicalType();
+    CCompositeTypeMemberDeclaration matchingMember =
+        findUnionMemberWithExactType(compositeType, operandType);
+
+    if (matchingMember == null) {
+      throw new CFAGenerationRuntimeException(
+          "Invalid cast to union type: operand type "
+              + operandType.toASTString("")
+              + " does not exactly match any union member's type at "
+              + loc);
+    }
+
+    CInitializer init = buildDesignatedUnionMemberInitializer(loc, matchingMember, castOperand);
+    return createTemporaryVariable(loc, castType, init);
+  }
+
+  /**
+   * Returns the first union member whose canonical type exactly matches the given operand type.
+   * Deterministic: first matching member wins.
+   */
+  private @Nullable CCompositeTypeMemberDeclaration findUnionMemberWithExactType(
+      CCompositeType unionType, CType operandType) {
+
+    for (CCompositeTypeMemberDeclaration member : unionType.getMembers()) {
+      if (member.getType().getCanonicalType().equals(operandType)) {
+        return member;
+      }
+    }
+    return null;
+  }
+
+  /** Build initializer list equivalent to: (U){ .member = operand } */
+  private CInitializer buildDesignatedUnionMemberInitializer(
+      FileLocation loc, CCompositeTypeMemberDeclaration member, CExpression operand) {
+
+    String memberName = member.getName();
+    CFieldDesignator designator = new CFieldDesignator(loc, memberName);
+    CInitializer designated =
+        new CDesignatedInitializer(
+            loc, ImmutableList.of(designator), new CInitializerExpression(loc, operand));
+
+    return new CInitializerList(loc, ImmutableList.of(designated));
   }
 
   private static class ContainsProblemTypeVisitor
@@ -1046,9 +1165,19 @@ class ASTConverter {
     final FileLocation loc = getLocation(e);
 
     CType ownerType = owner.getExpressionType().getCanonicalType();
-    if (e.isPointerDereference()) {
+    boolean isPointerDereference = e.isPointerDereference();
+    if (isPointerDereference) {
       if (ownerType instanceof CPointerType) {
         ownerType = ((CPointerType) ownerType).getType();
+
+      } else if (ownerType instanceof CArrayType arrayType) {
+        // Implicit use of the address of the array. "s->f" is the same as "(&(s[0])->f" but also
+        // the same as "s[0].f". We prefer the latter.
+        isPointerDereference = false;
+        ownerType = arrayType.getType();
+        owner =
+            new CArraySubscriptExpression(loc, ownerType, owner, CIntegerLiteralExpression.ZERO);
+
       } else if (!(ownerType instanceof CProblemType)) {
         throw parseContext.parseError("Pointer dereference of non-pointer type " + ownerType, e);
       }
@@ -1077,13 +1206,12 @@ class ASTConverter {
               typeConverter.convert(e.getExpressionType()),
               fieldName,
               owner,
-              e.isPointerDereference());
-    } else if (ownerType instanceof CCompositeType) {
+              isPointerDereference);
+    } else if (ownerType instanceof CCompositeType compositeType) {
       wayToInnerField =
-          getWayToInnerField((CCompositeType) ownerType, fieldName, loc, new ArrayList<>());
+          PositionInComposite.getWayToInnerField(compositeType, fieldName, new ArrayList<>());
       if (!wayToInnerField.isEmpty()) {
         CExpression current = owner;
-        boolean isPointerDereference = e.isPointerDereference();
         for (Pair<String, CType> field : wayToInnerField) {
           current =
               new CFieldReference(
@@ -1127,7 +1255,7 @@ class ASTConverter {
         if (fields.isEmpty()) {
 
           // in case there is only one field access we have to check here on a pointer dereference
-          if (isFirstVisit && e.isPointerDereference()) {
+          if (isFirstVisit && isPointerDereference) {
             CPointerExpression exp = new CPointerExpression(loc, owner.getExpressionType(), owner);
             CExpression tmpOwner =
                 new CFieldReference(loc, actField.getFirst(), actField.getSecond(), exp, false);
@@ -1141,7 +1269,7 @@ class ASTConverter {
           // here could be a pointer dereference, in this case we create a temporary variable
           // otherwise there is nothing special to be done
           if (isFirstVisit) {
-            if (e.isPointerDereference()) {
+            if (isPointerDereference) {
               CPointerExpression exp =
                   new CPointerExpression(loc, owner.getExpressionType(), owner);
               CExpression tmpOwner =
@@ -1175,45 +1303,6 @@ class ASTConverter {
     return fullFieldReference;
   }
 
-  /**
-   * This method creates a list of all necessary field access for finding the searched field.
-   * Besides the case that the searched field is directly in the struct, there is the case that the
-   * field is in an anonymous struct or union inside the "owner" struct. This anonymous structs /
-   * unions are then the "way" to the searched field.
-   *
-   * @param allReferences an empty list
-   * @return the fields (including the searched one) in the right order
-   */
-  private static List<Pair<String, CType>> getWayToInnerField(
-      CCompositeType owner,
-      String fieldName,
-      FileLocation loc,
-      List<Pair<String, CType>> allReferences) {
-    for (CCompositeTypeMemberDeclaration member : owner.getMembers()) {
-      if (member.getName().equals(fieldName)) {
-        allReferences.add(Pair.of(member.getName(), member.getType()));
-        return ImmutableList.copyOf(allReferences);
-      }
-    }
-
-    // no field found in current struct, so proceed to the structs/unions which are
-    // fields inside the current struct
-    for (CCompositeTypeMemberDeclaration member : owner.getMembers()) {
-      CType memberType = member.getType().getCanonicalType();
-      if (memberType instanceof CCompositeType
-          && member.getName().contains("__anon_type_member_")) {
-        List<Pair<String, CType>> tmp = new ArrayList<>(allReferences);
-        tmp.add(Pair.of(member.getName(), member.getType()));
-        tmp = getWayToInnerField((CCompositeType) memberType, fieldName, loc, tmp);
-        if (!tmp.isEmpty()) {
-          return ImmutableList.copyOf(tmp);
-        }
-      }
-    }
-
-    return ImmutableList.of();
-  }
-
   private CRightHandSide convert(IASTFunctionCallExpression e) {
 
     CExpression functionNameExpression =
@@ -1234,7 +1323,8 @@ class ASTConverter {
         sideAssignmentStack.leaveBlock();
         if (params.size() == 2) {
           // Expression from convertExpressionWithoutSideEffects is null if type was void
-          CType type1 = params.get(0) == null ? CVoidType.VOID : params.get(0).getExpressionType();
+          CType type1 =
+              params.getFirst() == null ? CVoidType.VOID : params.getFirst().getExpressionType();
           CType type2 = params.get(1) == null ? CVoidType.VOID : params.get(1).getExpressionType();
           if (areCompatibleTypes(type1, type2)) {
             return CIntegerLiteralExpression.ONE;
@@ -1258,7 +1348,7 @@ class ASTConverter {
       if (((CIdExpression) functionNameExpression).getName().equals(FUNC_CONSTANT)
           && params.size() == 1
           && scope.lookupFunction(FUNC_CONSTANT) == null) {
-        if (params.get(0) instanceof CLiteralExpression) {
+        if (params.getFirst() instanceof CLiteralExpression) {
           return CIntegerLiteralExpression.ONE;
         } else {
           return CIntegerLiteralExpression.ZERO;
@@ -1266,8 +1356,8 @@ class ASTConverter {
       }
       if (((CIdExpression) functionNameExpression).getName().equals(FUNC_OFFSETOF)
           && params.size() == 1
-          && params.get(0) instanceof CFieldReference) {
-        CFieldReference exp = (CFieldReference) params.get(0);
+          && params.getFirst() instanceof CFieldReference exp) {
+
         BigInteger offset = handleBuiltinOffsetOfFunction(exp, e);
         BigInteger byteInBit = new BigInteger("8");
         if (offset.remainder(byteInBit).equals(BigInteger.ZERO)) {
@@ -1278,9 +1368,9 @@ class ASTConverter {
       }
 
       CSimpleDeclaration d = ((CIdExpression) functionNameExpression).getDeclaration();
-      if (d instanceof CFunctionDeclaration) {
+      if (d instanceof CFunctionDeclaration cFunctionDeclaration) {
         // it may also be a variable declaration, when a function pointer is called
-        declaration = (CFunctionDeclaration) d;
+        declaration = cFunctionDeclaration;
       }
 
       if ((declaration == null)
@@ -1289,7 +1379,7 @@ class ASTConverter {
 
         // This is the GCC built-in function __builtin_expect(exp, c) that behaves like (exp).
         // http://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#index-g_t_005f_005fbuiltin_005fexpect-3345
-        return params.get(0);
+        return params.getFirst();
       }
     }
 
@@ -1336,8 +1426,8 @@ class ASTConverter {
             returnType);
       } else {
         final CType functionType = functionNameExpression.getExpressionType().getCanonicalType();
-        if (functionType instanceof CFunctionType) {
-          returnType = ((CFunctionType) functionType).getReturnType();
+        if (functionType instanceof CFunctionType cFunctionType) {
+          returnType = cFunctionType.getReturnType();
           logger.log(
               Level.FINE,
               loc + ":",
@@ -1384,11 +1474,10 @@ class ASTConverter {
           "unexpected type " + exp.getFieldOwner() + " in __builtin_offsetof argument: ", e);
     }
     final CType ownerType = exp.getFieldOwner().getExpressionType().getCanonicalType();
-    if (!(ownerType instanceof CCompositeType)) {
+    if (!(ownerType instanceof CCompositeType structType)) {
       throw parseContext.parseError(
           "unexpected type " + ownerType + " in __builtin_offsetof argument", e);
     }
-    CCompositeType structType = (CCompositeType) ownerType;
 
     BigInteger sumOffset = BigInteger.ZERO;
     Collections.reverse(fields);
@@ -1396,14 +1485,14 @@ class ASTConverter {
     for (CFieldReference field : fields) {
       BigInteger offset = machineModel.getFieldOffsetInBits(structType, field.getFieldName());
       sumOffset = sumOffset.add(offset);
-      CFieldReference lastField = fields.get(fields.size() - 1);
+      CFieldReference lastField = fields.getLast();
       if (!field.equals(lastField)) {
         final CType fieldType = field.getExpressionType().getCanonicalType();
-        if (!(fieldType instanceof CCompositeType)) {
+        if (!(fieldType instanceof CCompositeType cCompositeType)) {
           throw parseContext.parseError(
               "unexpected type " + fieldType + " in __builtin_offsetof argument", e);
         }
-        structType = (CCompositeType) fieldType;
+        structType = cCompositeType;
       }
     }
 
@@ -1412,8 +1501,8 @@ class ASTConverter {
 
   private boolean areCompatibleTypes(CType a, CType b) {
     // http://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html#index-g_t_005f_005fbuiltin_005ftypes_005fcompatible_005fp-3613
-    a = CTypes.copyDequalified(a.getCanonicalType());
-    b = CTypes.copyDequalified(b.getCanonicalType());
+    a = a.getCanonicalType().withoutQualifiers();
+    b = b.getCanonicalType().withoutQualifiers();
     if (a.equals(b)) {
       return true;
     }
@@ -1493,8 +1582,7 @@ class ASTConverter {
       if (enumType != null) {
         type =
             new CElaboratedType(
-                type.isConst(),
-                type.isVolatile(),
+                type.getQualifiers(),
                 ComplexTypeKind.ENUM,
                 enumType.getName(),
                 enumType.getOrigName(),
@@ -1531,10 +1619,10 @@ class ASTConverter {
         // In case of pointers inside field references that refer to inner fields
         // the CDT type is not as we want it, thus we resolve the type on our own.
         CType type;
-        if (operandType instanceof CPointerType) {
-          type = ((CPointerType) operandType).getType();
-        } else if (operandType instanceof CArrayType) {
-          type = ((CArrayType) operandType).getType();
+        if (operandType instanceof CPointerType cPointerType) {
+          type = cPointerType.getType();
+        } else if (operandType instanceof CArrayType cArrayType) {
+          type = cArrayType.getType();
         } else {
           if (!(operandType instanceof CProblemType)) {
             logger.logf(
@@ -1552,13 +1640,14 @@ class ASTConverter {
         // FOLLOWING IF CLAUSE WILL ONLY BE EVALUATED WHEN THE OPTION
         // cfa.simplifyPointerExpressions IS SET TO TRUE
         // in case of *& both can be left out
-        if (options.simplifyPointerExpressions() && operand instanceof CPointerExpression) {
-          return ((CPointerExpression) operand).getOperand();
+        if (options.simplifyPointerExpressions()
+            && operand instanceof CPointerExpression cPointerExpression) {
+          return cPointerExpression.getOperand();
         }
 
         CType type = typeConverter.convert(e.getExpressionType());
         if (containsProblemType(type)) {
-          type = new CPointerType(true, false, operandType);
+          type = new CPointerType(CTypeQualifiers.CONST, operandType);
         }
 
         // if none of the special cases before fits the default unaryExpression is created
@@ -1566,10 +1655,10 @@ class ASTConverter {
       }
       case IASTUnaryExpression.op_labelReference -> {
         // L: void * addressOfLabel = && L;
-        if (!(operand instanceof CIdExpression)) {
+        if (!(operand instanceof CIdExpression cIdExpression)) {
           throw parseContext.parseError("Invalid operand for address-of-label operator", e);
         }
-        String labelName = ((CIdExpression) operand).getName();
+        String labelName = cIdExpression.getName();
 
         // type given by CDT is problem type
         return new CAddressOfLabelExpression(fileLoc, CPointerType.POINTER_TO_VOID, labelName);
@@ -1586,8 +1675,32 @@ class ASTConverter {
         CBinaryExpression preExp =
             buildBinaryExpression(operand, CIntegerLiteralExpression.ONE, preOp);
         CLeftHandSide lhsPre = (CLeftHandSide) operand;
+        CExpressionAssignmentStatement result =
+            new CExpressionAssignmentStatement(fileLoc, lhsPre, preExp);
 
-        return new CExpressionAssignmentStatement(fileLoc, lhsPre, preExp);
+        // C11 _Atomic operations must appear inside an atomic section so that concurrent
+        // analyses treat the read-modify-write as a single indivisible step.
+        if (operandType.isAtomic() && !isLocalVariable(operand)) {
+          // if x is an atomic type, ++x is transformed to
+          // atomic_begin(); x = x + 1; tmp = x; atomic_end(); return tmp;
+          //
+          // e.g., y = ++x; is transformed to
+          // atomic_begin(); x = x + 1; tmp = x; atomic_end(); y = tmp;
+          //
+          // That is, the new value of x is saved to a temporary variable still in the atomic block
+          // so that the value of the expression is correct even for concurrent analyses.
+          // Without the temporary variable, another thread modifying x could interleave with the
+          // incrementing thread after the atomic block end, but before the value of x is read.
+          sideAssignmentStack.addPreSideAssignment(
+              createNoArgsFunctionCall(operand.getFileLocation(), ATOMIC_BEGIN_DECLARATION));
+          sideAssignmentStack.addPreSideAssignment(result);
+          CExpression tmp = createTemporaryVariableWithInitializer(fileLoc, lhsPre);
+          sideAssignmentStack.addPreSideAssignment(
+              createNoArgsFunctionCall(operand.getFileLocation(), ATOMIC_END_DECLARATION));
+          return tmp;
+        }
+
+        return result;
       }
       case IASTUnaryExpression.op_postFixIncr, IASTUnaryExpression.op_postFixDecr -> {
         // instead of x++ create "x = x + 1"
@@ -1609,8 +1722,34 @@ class ASTConverter {
           return result;
         }
 
+        // C11 _Atomic operations must appear inside an atomic section so that concurrent
+        // analyses treat the read-modify-write as a single indivisible step.
+        // see https://en.cppreference.com/w/c/language/atomic.html
+
+        // if x is an atomic type, x++ is transformed to
+        // atomic_begin(); tmp = x; x = x + 1; atomic_end(); return tmp;
+        //
+        // e.g., y = x++; is transformed to
+        // atomic_begin(); tmp = x; x = x + 1; atomic_end(); y = tmp;
+        //
+        // That is, the old value of x is saved to a temporary variable within the atomic block
+        // so that the value of the expression is correct even for concurrent analyses.
+        // Without the temporary variable, another thread modifying x could interleave with the
+        // incrementing thread after saving the old value of x, but before the atomic block start.
+        boolean isAtomic = operandType.isAtomic() && !isLocalVariable(operand);
+
+        if (isAtomic) {
+          sideAssignmentStack.addPreSideAssignment(
+              createNoArgsFunctionCall(operand.getFileLocation(), ATOMIC_BEGIN_DECLARATION));
+        }
+
         CExpression tmp = createTemporaryVariableWithInitializer(fileLoc, lhsPost);
         sideAssignmentStack.addPreSideAssignment(result);
+
+        if (isAtomic) {
+          sideAssignmentStack.addPreSideAssignment(
+              createNoArgsFunctionCall(operand.getFileLocation(), ATOMIC_END_DECLARATION));
+        }
 
         return tmp;
       }
@@ -1628,12 +1767,12 @@ class ASTConverter {
           // C11 §6.5.3.4 (5) type is always size_t (CDT has wrong type for _Alignof)
           type = CNumericTypes.SIZE_T;
         } else if (e.getOperator() == IASTUnaryExpression.op_minus
-            && operand.getExpressionType() instanceof CSimpleType) {
+            && operand.getExpressionType() instanceof CSimpleType innerType) {
           // CDT parser might get the type wrong in this case, e.g.:
           // literals that should be of type long would still be int instead of long,
           // because CDT only makes the operand long if there is a 'L' at the end
           // => we cannot use e.getExpressionType() here!
-          CSimpleType innerType = (CSimpleType) operand.getExpressionType();
+
           // now do not forget: operand should get promoted to int if its type is smaller than int:
           type =
               CTypes.isIntegerType(innerType)
@@ -1666,10 +1805,10 @@ class ASTConverter {
         CIdExpression tmpVar = createTemporaryVariableWithInitializer(fileLoc, operand);
         return new CPointerExpression(fileLoc, type, tmpVar);
 
-      } else if (operand instanceof CUnaryExpression
-          && ((CUnaryExpression) operand).getOperator() == UnaryOperator.AMPER) {
+      } else if (operand instanceof CUnaryExpression cUnaryExpression
+          && cUnaryExpression.getOperator() == UnaryOperator.AMPER) {
         // in case of *& both can be left out
-        return ((CUnaryExpression) operand).getOperand();
+        return cUnaryExpression.getOperand();
 
       } else if (operand instanceof CPointerExpression) {
         // in case of ** a temporary variable is needed
@@ -1728,45 +1867,33 @@ class ASTConverter {
 
   public CAstNode convert(final IASTStatement s) {
 
-    if (s instanceof IASTExpressionStatement) {
-      return convert((IASTExpressionStatement) s);
-
-    } else if (s instanceof IASTReturnStatement) {
-      return convert((IASTReturnStatement) s);
-
-    } else if (s instanceof IASTProblemStatement) {
-      throw parseContext.parseError((IASTProblemStatement) s);
-
-    } else {
-      throw parseContext.parseError("unknown statement: " + s.getClass(), s);
-    }
+    return switch (s) {
+      case IASTExpressionStatement iASTExpressionStatement -> convert(iASTExpressionStatement);
+      case IASTReturnStatement iASTReturnStatement -> convert(iASTReturnStatement);
+      case IASTProblemStatement iASTProblemStatement ->
+          throw parseContext.parseError(iASTProblemStatement);
+      default -> throw parseContext.parseError("unknown statement: " + s.getClass(), s);
+    };
   }
 
   public CStatement convert(final IASTExpressionStatement s) {
     return convertExpressionToStatement(s.getExpression());
   }
 
-  public CStatement convertExpressionToStatement(final IASTExpression e) {
-    CAstNode node = convertExpressionWithSideEffects(e);
+  public @Nullable CStatement convertExpressionToStatement(final IASTExpression e) {
+    @Nullable CAstNode node = convertExpressionWithSideEffects(e);
 
-    if (node instanceof CExpressionAssignmentStatement) {
-      return (CExpressionAssignmentStatement) node;
-
-    } else if (node instanceof CFunctionCallAssignmentStatement) {
-      return (CFunctionCallAssignmentStatement) node;
-
-    } else if (node instanceof CFunctionCallExpression) {
-      return new CFunctionCallStatement(getLocation(e), (CFunctionCallExpression) node);
-
-    } else if (node instanceof CExpression) {
-      return new CExpressionStatement(getLocation(e), (CExpression) node);
-
-    } else if (node == null) {
-      return null;
-
-    } else {
-      throw new AssertionError();
-    }
+    return switch (node) {
+      case CExpressionAssignmentStatement cExpressionAssignmentStatement ->
+          cExpressionAssignmentStatement;
+      case CFunctionCallAssignmentStatement cFunctionCallAssignmentStatement ->
+          cFunctionCallAssignmentStatement;
+      case CFunctionCallExpression cFunctionCallExpression ->
+          new CFunctionCallStatement(getLocation(e), cFunctionCallExpression);
+      case CExpression cExpression -> new CExpressionStatement(getLocation(e), cExpression);
+      case null -> null;
+      default -> throw new AssertionError();
+    };
   }
 
   public CReturnStatement convert(final IASTReturnStatement s) {
@@ -1787,8 +1914,8 @@ class ASTConverter {
             Level.WARNING, loc + ":", "Return statement without expression in non-void function.");
         CInitializer defaultValue =
             CDefaults.forType(machineModel, returnVariableDeclaration.orElseThrow().getType(), loc);
-        if (defaultValue instanceof CInitializerExpression) {
-          rhs = ((CInitializerExpression) defaultValue).getExpression();
+        if (defaultValue instanceof CInitializerExpression cInitializerExpression) {
+          rhs = cInitializerExpression.getExpression();
         }
       }
       if (rhs != null) {
@@ -1833,7 +1960,7 @@ class ASTConverter {
     Declarator declarator =
         convert(f.getDeclarator(), specifier.getSecond(), cStorageClass == CStorageClass.STATIC);
 
-    if (!(declarator.type() instanceof CFunctionTypeWithNames)) {
+    if (!(declarator.type() instanceof CFunctionTypeWithNames declSpec)) {
       throw parseContext.parseError("Unsupported nested declarator for function definition", f);
     }
     if (declarator.initializer() != null) {
@@ -1842,8 +1969,6 @@ class ASTConverter {
     if (declarator.name() == null) {
       throw parseContext.parseError("Missing name for function definition", f);
     }
-
-    CFunctionTypeWithNames declSpec = (CFunctionTypeWithNames) declarator.type();
 
     return new CFunctionDeclaration(
         getLocation(f),
@@ -1884,8 +2009,7 @@ class ASTConverter {
       // now replace type with an elaborated type referencing the new type
       type =
           new CElaboratedType(
-              type.isConst(),
-              type.isVolatile(),
+              type.getQualifiers(),
               complexType.getKind(),
               complexType.getName(),
               complexType.getOrigName(),
@@ -1964,7 +2088,7 @@ class ASTConverter {
       while (innerType instanceof CTypedefType) {
         innerType = ((CTypedefType) innerType).getRealType();
       }
-      if (innerType instanceof CFunctionType) {
+      if (innerType instanceof CFunctionType functionType) {
         if (initializer != null) {
           throw parseContext.parseError("Function definition with initializer", d);
         }
@@ -1975,9 +2099,8 @@ class ASTConverter {
 
         List<CParameterDeclaration> params;
 
-        CFunctionType functionType = (CFunctionType) innerType;
-        if (functionType instanceof CFunctionTypeWithNames) {
-          params = ((CFunctionTypeWithNames) functionType).getParameterDeclarations();
+        if (functionType instanceof CFunctionTypeWithNames cFunctionTypeWithNames) {
+          params = cFunctionTypeWithNames.getParameterDeclarations();
         } else {
           params = new ArrayList<>(functionType.getParameters().size());
           int i = 0;
@@ -1987,8 +2110,8 @@ class ASTConverter {
         }
 
         final ImmutableSet<CFunctionDeclaration.FunctionAttribute> attributes;
-        if (d instanceof IASTFunctionDeclarator) {
-          attributes = getAttributes((IASTFunctionDeclarator) d);
+        if (d instanceof IASTFunctionDeclarator iASTFunctionDeclarator) {
+          attributes = getAttributes(iASTFunctionDeclarator);
         } else {
           attributes = ImmutableSet.of();
         }
@@ -2058,14 +2181,13 @@ class ASTConverter {
     if (d.getParent() instanceof IASTCompositeTypeSpecifier) {
       // FIXME: remove conditional after debugging
     }
-    if (d instanceof IASTProblemDeclaration) {
-      throw parseContext.parseError((IASTProblemDeclaration) d);
+    if (d instanceof IASTProblemDeclaration iASTProblemDeclaration) {
+      throw parseContext.parseError(iASTProblemDeclaration);
     }
 
-    if (!(d instanceof IASTSimpleDeclaration)) {
+    if (!(d instanceof IASTSimpleDeclaration sd)) {
       throw parseContext.parseError("unknown declaration type " + d.getClass().getSimpleName(), d);
     }
-    IASTSimpleDeclaration sd = (IASTSimpleDeclaration) d;
 
     Pair<CStorageClass, ? extends CType> specifier = convert(sd.getDeclSpecifier());
     // TODO: add knowledge about sd.DeclSpecifier.alignmentSpecifiers
@@ -2079,8 +2201,7 @@ class ASTConverter {
       addSideEffectDeclarationForType(compositeType, getLocation(d));
       type =
           new CElaboratedType(
-              compositeType.isConst(),
-              compositeType.isVolatile(),
+              compositeType.getQualifiers(),
               compositeType.getKind(),
               compositeType.getName(),
               compositeType.getOrigName(),
@@ -2188,8 +2309,8 @@ class ASTConverter {
           IASTExpression bitField = ((IASTFieldDeclarator) currentDecl).getBitFieldSize();
           if (bitField instanceof IASTLiteralExpression) {
             CExpression cExpression = convertExpressionWithoutSideEffects(bitField);
-            if (cExpression instanceof CIntegerLiteralExpression) {
-              bitFieldSize = ((CIntegerLiteralExpression) cExpression).getValue().intValue();
+            if (cExpression instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
+              bitFieldSize = cIntegerLiteralExpression.getValue().intValue();
             } else {
               throw parseContext.parseError("Unsupported bitfield specifier", d);
             }
@@ -2234,9 +2355,9 @@ class ASTConverter {
       // with multidimensional arrays
       List<IASTArrayModifier> tmpArrMod = new ArrayList<>();
       for (IASTNode modifier : modifiers) {
-        if (modifier instanceof IASTArrayModifier) {
-          tmpArrMod.add((IASTArrayModifier) modifier);
-        } else if (modifier instanceof IASTPointerOperator) {
+        if (modifier instanceof IASTArrayModifier iASTArrayModifier) {
+          tmpArrMod.add(iASTArrayModifier);
+        } else if (modifier instanceof IASTPointerOperator iASTPointerOperator) {
           // add accumulated array modifiers before adding next pointer operator
           for (int i = tmpArrMod.size() - 1; i >= 0; i--) {
             type = convert(tmpArrMod.get(i), type, isFunctionParameter);
@@ -2244,7 +2365,7 @@ class ASTConverter {
           // clear added modifiers
           tmpArrMod.clear();
 
-          type = typeConverter.convert((IASTPointerOperator) modifier, type);
+          type = typeConverter.convert(iASTPointerOperator, type);
 
         } else {
           throw new AssertionError();
@@ -2317,8 +2438,7 @@ class ASTConverter {
       CExpression lengthExp =
           new CIntegerLiteralExpression(getLocation(initializer), CNumericTypes.INT, length);
 
-      return new CArrayType(
-          arrayType.isConst(), arrayType.isVolatile(), arrayType.getType(), lengthExp);
+      return new CArrayType(arrayType.getQualifiers(), arrayType.getType(), lengthExp);
 
     } else if (initializer instanceof CASTLiteralExpression literalExpression
         && (arrayType.getType().equals(CNumericTypes.CHAR)
@@ -2334,8 +2454,7 @@ class ASTConverter {
           new CIntegerLiteralExpression(
               getLocation(initializer), CNumericTypes.INT, BigInteger.valueOf(length));
 
-      return new CArrayType(
-          arrayType.isConst(), arrayType.isVolatile(), arrayType.getType(), lengthExp);
+      return new CArrayType(arrayType.getQualifiers(), arrayType.getType(), lengthExp);
 
     } else {
       return arrayType;
@@ -2360,6 +2479,8 @@ class ASTConverter {
         }
         String mode = getAttributeString(attribute.getArgumentClause().getTokenCharImage());
         type = handleModeAttribute((CSimpleType) type, mode, d);
+      } else if (name.equals(EclipseCdtWrapper.ATOMIC_ATTRIBUTE)) {
+        throw parseContext.parseError("_Atomic currently unsupported for declarators", d);
       }
     }
     return type;
@@ -2454,15 +2575,14 @@ class ASTConverter {
 
     // Copy const, volatile, and signedness from original type, rest from newType
     return new CSimpleType(
-        type.isConst(),
-        type.isVolatile(),
+        type.getQualifiers(),
         newType.getType(),
         newType.hasLongSpecifier(),
         newType.hasShortSpecifier(),
         type.hasSignedSpecifier(),
         type.hasUnsignedSpecifier(),
-        false, // checked above
-        false, // checked above
+        false,
+        false,
         newType.hasLongLongSpecifier());
   }
 
@@ -2475,7 +2595,13 @@ class ASTConverter {
       if (!isFunctionParameter && !isSafeAsArrayLength(lengthExp)) {
         lengthExp = createTemporaryVariableWithInitializer(getLocation(am), lengthExp);
       }
-      return new CArrayType(a.isConst(), a.isVolatile(), type, lengthExp);
+      return new CArrayType(
+          CTypeQualifiers.create(
+              typeConverter.hasUnexpectedCPAcheckerAttributeForAtomic(a),
+              a.isConst(),
+              a.isVolatile()),
+          type,
+          lengthExp);
 
     } else {
       throw parseContext.parseError("Unknown array modifier", am);
@@ -2495,10 +2621,9 @@ class ASTConverter {
 
   private Declarator convert(IASTFunctionDeclarator d, CType returnType, boolean isStaticFunction) {
 
-    if (!(d instanceof IASTStandardFunctionDeclarator)) {
+    if (!(d instanceof IASTStandardFunctionDeclarator sd)) {
       throw parseContext.parseError("Unknown non-standard function definition", d);
     }
-    IASTStandardFunctionDeclarator sd = (IASTStandardFunctionDeclarator) d;
 
     // handle return type
     returnType = typeConverter.convertPointerOperators(d.getPointerOperators(), returnType);
@@ -2506,8 +2631,7 @@ class ASTConverter {
       // type of functions is implicitly int it not specified
       returnType =
           new CSimpleType(
-              t.isConst(),
-              t.isVolatile(),
+              t.getQualifiers(),
               CBasicType.INT,
               t.hasLongSpecifier(),
               t.hasShortSpecifier(),
@@ -2557,24 +2681,19 @@ class ASTConverter {
   private Pair<CStorageClass, ? extends CType> convert(IASTDeclSpecifier d) {
     CStorageClass sc = typeConverter.convertCStorageClass(d);
 
-    if (d instanceof IASTCompositeTypeSpecifier) {
-      return Pair.of(sc, convert((IASTCompositeTypeSpecifier) d));
-
-    } else if (d instanceof IASTElaboratedTypeSpecifier) {
-      return Pair.of(sc, typeConverter.convert((IASTElaboratedTypeSpecifier) d));
-
-    } else if (d instanceof IASTEnumerationSpecifier) {
-      return Pair.of(sc, convert((IASTEnumerationSpecifier) d));
-
-    } else if (d instanceof IASTNamedTypeSpecifier) {
-      return Pair.of(sc, typeConverter.convert((IASTNamedTypeSpecifier) d));
-
-    } else if (d instanceof IASTSimpleDeclSpecifier) {
-      return Pair.of(sc, typeConverter.convert((IASTSimpleDeclSpecifier) d));
-
-    } else {
-      throw parseContext.parseError("unknown declSpecifier", d);
-    }
+    return switch (d) {
+      case IASTCompositeTypeSpecifier iASTCompositeTypeSpecifier ->
+          Pair.of(sc, convert(iASTCompositeTypeSpecifier));
+      case IASTElaboratedTypeSpecifier iASTElaboratedTypeSpecifier ->
+          Pair.of(sc, typeConverter.convert(iASTElaboratedTypeSpecifier));
+      case IASTEnumerationSpecifier iASTEnumerationSpecifier ->
+          Pair.of(sc, convert(iASTEnumerationSpecifier));
+      case IASTNamedTypeSpecifier iASTNamedTypeSpecifier ->
+          Pair.of(sc, typeConverter.convert(iASTNamedTypeSpecifier));
+      case IASTSimpleDeclSpecifier iASTSimpleDeclSpecifier ->
+          Pair.of(sc, typeConverter.convert(iASTSimpleDeclSpecifier));
+      default -> throw parseContext.parseError("unknown declSpecifier", d);
+    };
   }
 
   private CCompositeType convert(IASTCompositeTypeSpecifier d) {
@@ -2629,7 +2748,7 @@ class ASTConverter {
       }
     }
     CCompositeType compositeType =
-        new CCompositeType(d.isConst(), d.isVolatile(), kind, list, name, origName);
+        new CCompositeType(typeConverter.convertCTypeQualifiers(d), kind, list, name, origName);
 
     // in cases like struct s { (struct s)* f }
     // we need to fill in the binding from the inner "struct s" type to the outer
@@ -2659,7 +2778,7 @@ class ASTConverter {
 
     CSimpleType integerType = getEnumerationType(list);
     CEnumType enumType =
-        new CEnumType(d.isConst(), d.isVolatile(), integerType, list, name, origName);
+        new CEnumType(typeConverter.convertCTypeQualifiers(d), integerType, list, name, origName);
     for (CEnumerator enumValue : enumType.getEnumerators()) {
       enumValue.setEnum(enumType);
     }
@@ -2729,88 +2848,225 @@ class ASTConverter {
   }
 
   private IASTExpression toExpression(IASTInitializerClause i) {
-    if (i instanceof IASTExpression) {
-      return (IASTExpression) i;
+    if (i instanceof IASTExpression iASTExpression) {
+      return iASTExpression;
     }
     throw parseContext.parseError("Initializer clause in unexpected location", i);
   }
 
   private CInitializer convert(
       IASTInitializerClause i, CType type, @Nullable CVariableDeclaration declaration) {
-    if (i instanceof IASTExpression) {
-      CExpression exp = convertExpressionWithoutSideEffects((IASTExpression) i);
-      return new CInitializerExpression(exp.getFileLocation(), exp);
-    } else if (i instanceof IASTInitializerList) {
-      return convert((IASTInitializerList) i, type, declaration);
-    } else if (i instanceof ICASTDesignatedInitializer) {
-      return convert((ICASTDesignatedInitializer) i, type, declaration);
-    } else {
-      throw parseContext.parseError(
-          "unknown initializer claus: " + i.getClass().getSimpleName(), i);
-    }
+    return switch (i) {
+      case IASTExpression iASTExpression -> {
+        CExpression exp = convertExpressionWithoutSideEffects(iASTExpression);
+        yield new CInitializerExpression(exp.getFileLocation(), exp);
+      }
+      case IASTInitializerList iASTInitializerList ->
+          convert(iASTInitializerList, type, declaration);
+      case ICASTDesignatedInitializer iCASTDesignatedInitializer ->
+          convert(iCASTDesignatedInitializer, type, declaration);
+      default ->
+          throw parseContext.parseError(
+              "unknown initializer claus: " + i.getClass().getSimpleName(), i);
+    };
   }
 
-  private CInitializer convert(
-      IASTInitializer i, CType type, @Nullable CVariableDeclaration declaration) {
-    if (i == null) {
-      return null;
-
-    } else if (i instanceof IASTInitializerList) {
-      return convert((IASTInitializerList) i, type, declaration);
-    } else if (i instanceof IASTEqualsInitializer) {
-      return convert((IASTEqualsInitializer) i, type, declaration);
-    } else if (i instanceof ICASTDesignatedInitializer) {
-      return convert((ICASTDesignatedInitializer) i, type, declaration);
-    } else {
-      throw parseContext.parseError("unknown initializer: " + i.getClass().getSimpleName(), i);
-    }
+  private @Nullable CInitializer convert(
+      @Nullable IASTInitializer i, CType type, @Nullable CVariableDeclaration declaration) {
+    return switch (i) {
+      case null -> null;
+      case IASTInitializerList iASTInitializerList ->
+          convert(iASTInitializerList, type, declaration);
+      case IASTEqualsInitializer iASTEqualsInitializer ->
+          convert(iASTEqualsInitializer, type, declaration);
+      case ICASTDesignatedInitializer iCASTDesignatedInitializer ->
+          convert(iCASTDesignatedInitializer, type, declaration);
+      default ->
+          throw parseContext.parseError("unknown initializer: " + i.getClass().getSimpleName(), i);
+    };
   }
 
   private CInitializer convert(
       ICASTDesignatedInitializer init, CType type, @Nullable CVariableDeclaration declaration) {
     ICASTDesignator[] desInit = init.getDesignators();
 
-    CInitializer cInit = convert(init.getOperand(), type, declaration);
-
-    FileLocation fileLoc = cInit.getFileLocation();
+    FileLocation fileLoc = getLocation(init);
 
     List<CDesignator> designators = new ArrayList<>(desInit.length);
+    CType currentOwnerType = type.getCanonicalType();
 
     // convert all designators
     for (ICASTDesignator designator : desInit) {
-      CDesignator r;
-      if (designator instanceof ICASTFieldDesignator) {
-        r = new CFieldDesignator(fileLoc, convert(((ICASTFieldDesignator) designator).getName()));
-
-      } else if (designator instanceof ICASTArrayDesignator) {
-        r =
-            new CArrayDesignator(
-                fileLoc,
-                convertExpressionWithoutSideEffects(
-                    ((ICASTArrayDesignator) designator).getSubscriptExpression()));
-
-      } else if (designator instanceof IGCCASTArrayRangeDesignator) {
-        r =
-            new CArrayRangeDesignator(
-                fileLoc,
-                convertExpressionWithoutSideEffects(
-                    ((IGCCASTArrayRangeDesignator) designator).getRangeFloor()),
-                convertExpressionWithoutSideEffects(
-                    ((IGCCASTArrayRangeDesignator) designator).getRangeCeiling()));
-
-      } else {
-        throw parseContext.parseError("Unsupported Designator", designator);
-      }
-      designators.add(r);
+      DesignatorsAndLastType resolvedDesignator =
+          switch (designator) {
+            case ICASTFieldDesignator fieldDesignator ->
+                resolveFieldDesignator(fileLoc, currentOwnerType, fieldDesignator);
+            case ICASTArrayDesignator arrayDesignator ->
+                resolveArrayDesignator(fileLoc, currentOwnerType, arrayDesignator);
+            case IGCCASTArrayRangeDesignator arrayRangeDesignator ->
+                resolveArrayRangeDesignator(fileLoc, currentOwnerType, arrayRangeDesignator);
+            default -> throw parseContext.parseError("Unsupported Designator", designator);
+          };
+      designators.addAll(resolvedDesignator.designators());
+      currentOwnerType = resolvedDesignator.lastOwnerType().getCanonicalType();
     }
+    CInitializer cInit = convert(init.getOperand(), currentOwnerType, declaration);
 
     return new CDesignatedInitializer(fileLoc, designators, cInit);
   }
 
+  private record DesignatorsAndLastType(List<CDesignator> designators, CType lastOwnerType) {}
+
+  private DesignatorsAndLastType resolveArrayDesignator(
+      FileLocation fileLoc, CType ownerType, ICASTArrayDesignator arrayDesignator) {
+
+    final CType elementType;
+    if (ownerType instanceof CArrayType arrayType) {
+      elementType = arrayType.getType().getCanonicalType();
+    } else {
+      // If an array designator is applied to a type different from array,
+      // we assume that the array type was already resolved by a parent initializer list.
+      elementType = ownerType;
+    }
+
+    CExpression subscriptExpression =
+        convertExpressionWithoutSideEffects(arrayDesignator.getSubscriptExpression());
+    CDesignator designator = new CArrayDesignator(fileLoc, subscriptExpression);
+    return new DesignatorsAndLastType(ImmutableList.of(designator), elementType);
+  }
+
+  private DesignatorsAndLastType resolveArrayRangeDesignator(
+      FileLocation fileLoc, CType ownerType, IGCCASTArrayRangeDesignator rangeDesignator) {
+
+    final CType elementType;
+    if (ownerType instanceof CArrayType arrayType) {
+      elementType = arrayType.getType().getCanonicalType();
+    } else {
+      // If an array designator is applied to a type different from array,
+      // we assume that the array type was already resolved by a parent initializer list.
+      elementType = ownerType;
+    }
+
+    CExpression rangeFloor = convertExpressionWithoutSideEffects(rangeDesignator.getRangeFloor());
+    CExpression rangeCeiling =
+        convertExpressionWithoutSideEffects(rangeDesignator.getRangeCeiling());
+
+    CDesignator designator = new CArrayRangeDesignator(fileLoc, rangeFloor, rangeCeiling);
+    return new DesignatorsAndLastType(ImmutableList.of(designator), elementType);
+  }
+
+  private DesignatorsAndLastType resolveFieldDesignator(
+      FileLocation fileLoc, CType ownerType, ICASTFieldDesignator fieldDesignator) {
+
+    String targetFieldName = convert(fieldDesignator.getName());
+
+    final List<CDesignator> designators;
+    CType currentOwnerType = ownerType;
+    if (ownerType instanceof CCompositeType compositeType) {
+      List<Pair<String, CType>> wayToField =
+          PositionInComposite.getWayToInnerField(compositeType, targetFieldName, new ArrayList<>());
+      Preconditions.checkState(!wayToField.isEmpty());
+
+      ImmutableList.Builder<CDesignator> listBuilder =
+          ImmutableList.builderWithExpectedSize(wayToField.size());
+      for (Pair<String, CType> wayToFieldPair : wayToField) {
+        String name = wayToFieldPair.getFirst();
+        listBuilder.add(new CFieldDesignator(fileLoc, name));
+        currentOwnerType = wayToFieldPair.getSecondNotNull();
+      }
+      designators = listBuilder.build();
+
+    } else {
+      designators = ImmutableList.of(new CFieldDesignator(fileLoc, targetFieldName));
+    }
+    return new DesignatorsAndLastType(designators, currentOwnerType);
+  }
+
+  /**
+   * Convert an initializer list for an array or scalar type. Any excess elements are still
+   * converted as if they fit the assigned type.
+   *
+   * <p>Example: For the below code, value '1' is used to initialize x.i == 1 and y[0],
+   * respectively. The values 2 and 3 are ignored in both initializations. But this method still
+   * returns an initializer that lists all three values: 1, 2, and 3.
+   *
+   * <pre>
+   *   struct {
+   *     int i;
+   *   } x = {1, 2, 3};
+   *   int y[1] = {1, 2, 3};
+   * </pre>
+   *
+   * <p>The provided assignment type must be a non-composite type, but it may contain nested
+   * composite types (for example an array of structs).
+   */
+  private CInitializer convertInitializerListForNonCompositeType(
+      IASTInitializerList iList, CType assignmentType, @Nullable CVariableDeclaration declaration) {
+
+    final CType elementType =
+        switch (assignmentType.getCanonicalType()) {
+          case CCompositeType ignored ->
+              throw new IllegalArgumentException(
+                  "Given type is resolved to composite type, expected array or scalar: "
+                      + assignmentType);
+          case CArrayType arrayType -> arrayType.getType();
+          default -> assignmentType.getCanonicalType();
+        };
+    List<CInitializer> initializerList = new ArrayList<>();
+    for (IASTInitializerClause clause : iList.getClauses()) {
+      CInitializer newI = convert(clause, elementType, declaration);
+      if (newI != null) {
+        initializerList.add(newI);
+      }
+    }
+    return new CInitializerList(getLocation(iList), initializerList);
+  }
+
+  /** Convert an initializer list for a composite type (struct/union). */
+  private CInitializer convertInitializerListForCompositeType(
+      IASTInitializerList iList,
+      CCompositeType compositeType,
+      @Nullable CVariableDeclaration declaration) {
+    List<CInitializer> initializerList = new ArrayList<>();
+
+    PositionInComposite positionInComposite = new PositionInComposite(compositeType);
+
+    for (IASTInitializerClause clause : iList.getClauses()) {
+      CInitializer newI =
+          switch (clause) {
+            case IASTExpression expr -> {
+              positionInComposite.advanceToScalar();
+              CInitializer result =
+                  new CInitializerExpression(
+                      getLocation(expr), convertExpressionWithoutSideEffects(expr));
+              positionInComposite.advanceToNextElement();
+              yield result;
+            }
+            case IASTInitializerList nestedList -> {
+              CType targetType = positionInComposite.getCurrentType();
+              CInitializer result = convert(nestedList, targetType, declaration);
+              positionInComposite.advanceToNextElement();
+              yield result;
+            }
+            case ICASTDesignatedInitializer designatedInit -> {
+              CInitializer result = convert(designatedInit, compositeType, declaration);
+              positionInComposite.jumpToPositionAfterDesignator(designatedInit);
+              yield result;
+            }
+            default ->
+                throw parseContext.parseError(
+                    "unknown initializer clause: " + clause.getClass().getSimpleName(), clause);
+          };
+      if (newI != null) {
+        initializerList.add(newI);
+      }
+    }
+
+    return new CInitializerList(getLocation(iList), initializerList);
+  }
+
   private CInitializer convert(
       IASTInitializerList iList, CType type, @Nullable CVariableDeclaration declaration) {
-
-    List<CInitializer> initializerList = new ArrayList<>();
 
     if (declaration != null && iList.getSize() == 1) {
       if (type instanceof CSimpleType || type instanceof CPointerType) {
@@ -2821,26 +3077,19 @@ class ASTConverter {
       }
     }
 
-    // TODO: we might need do to something similar for more types
-    if (type instanceof CArrayType) {
-      type = ((CArrayType) type).getType();
+    CType canonicalParentType = type.getCanonicalType();
+    if (canonicalParentType instanceof CCompositeType compositeType) {
+      return convertInitializerListForCompositeType(iList, compositeType, declaration);
+    } else {
+      return convertInitializerListForNonCompositeType(iList, type, declaration);
     }
-
-    for (IASTInitializerClause i : iList.getClauses()) {
-      CInitializer newI = convert(i, type, declaration);
-      if (newI != null) {
-        initializerList.add(newI);
-      }
-    }
-
-    return new CInitializerList(getLocation(iList), initializerList);
   }
 
   private @Nullable IASTInitializerClause unpackBracedInitializer(IASTInitializerList pIList) {
     if (pIList.getSize() == 1) {
       IASTInitializerClause clause = pIList.getClauses()[0];
-      if (clause instanceof IASTInitializerList) {
-        return unpackBracedInitializer((IASTInitializerList) clause);
+      if (clause instanceof IASTInitializerList iASTInitializerList) {
+        return unpackBracedInitializer(iASTInitializerList);
       }
       return clause;
     }
@@ -2856,56 +3105,65 @@ class ASTConverter {
         return null;
       }
 
-      final CInitializerExpression result;
-      if (initializer instanceof CAssignment) {
-        sideAssignmentStack.addPreSideAssignment(initializer);
-        result =
-            new CInitializerExpression(
-                getLocation(e), ((CAssignment) initializer).getLeftHandSide());
-
-      } else if (initializer instanceof CFunctionCallExpression) {
-        FileLocation loc = getLocation(i);
-
-        if (declaration != null && !declaration.getType().getCanonicalType().isConst()) {
-          // This is a variable declaration like "int i = f();"
-          // We can replace this with "int i; i = f();"
-          CIdExpression var = new CIdExpression(loc, declaration);
-          sideAssignmentStack.addPostSideAssignment(
-              new CFunctionCallAssignmentStatement(
-                  loc, var, (CFunctionCallExpression) initializer));
-          return null; // empty initializer
-
-        } else {
-          // This is something more complicated, like a function call inside an array initializer.
-          // We need a temporary variable.
-
-          CIdExpression var = createTemporaryVariableWithTypeOf(e);
-          sideAssignmentStack.addPreSideAssignment(
-              new CFunctionCallAssignmentStatement(
-                  loc, var, (CFunctionCallExpression) initializer));
-          result = new CInitializerExpression(loc, var);
+      final FileLocation loc = getLocation(ic);
+      CExpression initializedExpression;
+      switch (initializer) {
+        case CAssignment cAssignment -> {
+          sideAssignmentStack.addPreSideAssignment(initializer);
+          initializedExpression = cAssignment.getLeftHandSide();
         }
+        case CFunctionCallExpression cFunctionCallExpression -> {
+          if (declaration != null && !declaration.getType().getCanonicalType().isConst()) {
+            // This is a variable declaration like "int i = f();"
+            // We can replace this with "int i; i = f();"
+            CIdExpression var = new CIdExpression(loc, declaration);
+            sideAssignmentStack.addPostSideAssignment(
+                new CFunctionCallAssignmentStatement(loc, var, cFunctionCallExpression));
+            return null; // empty initializer
 
-      } else if (initializer instanceof CExpression) {
-        result = new CInitializerExpression(getLocation(ic), (CExpression) initializer);
+          } else {
+            // This is something more complicated, like a function call inside an array initializer.
+            // We need a temporary variable.
 
-      } else {
-        throw parseContext.parseError(
-            "Initializer is not free of side effects, it is a "
-                + initializer.getClass().getSimpleName(),
-            e);
+            CIdExpression var = createTemporaryVariableWithTypeOf(e);
+            sideAssignmentStack.addPreSideAssignment(
+                new CFunctionCallAssignmentStatement(loc, var, cFunctionCallExpression));
+            initializedExpression = var;
+          }
+        }
+        case CExpression cExpression -> initializedExpression = cExpression;
+        default ->
+            throw parseContext.parseError(
+                "Initializer is not free of side-effects, it is a "
+                    + initializer.getClass().getSimpleName(),
+                e);
       }
 
-      if (!areInitializerAssignable(type, result.getExpression())) {
+      if (type.getCanonicalType() instanceof CPointerType
+          && initializedExpression.getExpressionType().getCanonicalType()
+              instanceof CArrayType initializerType) {
+        // TODO This is part of #1035 but should probably be handled generally somewhere else and
+        // removed here.
+        CType elementType = initializerType.getType();
+        initializedExpression =
+            new CUnaryExpression(
+                loc,
+                new CPointerType(initializerType.getQualifiers(), elementType),
+                new CArraySubscriptExpression(
+                    loc, elementType, initializedExpression, CIntegerLiteralExpression.ZERO),
+                CUnaryExpression.UnaryOperator.AMPER);
+      }
+
+      if (!areInitializerAssignable(type, initializedExpression)) {
         if (type.getCanonicalType() instanceof CPointerType
-            && CTypes.isIntegerType(result.getExpression().getExpressionType())) {
+            && CTypes.isIntegerType(initializedExpression.getExpressionType())) {
           if (declaration != null) {
             logger.logf(
                 Level.WARNING,
                 "%s: Initialization of pointer variable %s with integer expression %s.",
-                result.getFileLocation(),
+                initializedExpression.getFileLocation(),
                 type.toASTString(declaration.getName()),
-                result);
+                initializedExpression);
           }
         } else {
           throw parseContext.parseError(
@@ -2918,10 +3176,10 @@ class ASTConverter {
         }
       }
 
-      return result;
+      return new CInitializerExpression(loc, initializedExpression);
 
-    } else if (ic instanceof IASTInitializerList) {
-      return convert((IASTInitializerList) ic, type, declaration);
+    } else if (ic instanceof IASTInitializerList iASTInitializerList) {
+      return convert(iASTInitializerList, type, declaration);
     } else {
       throw parseContext.parseError("unknown initializer: " + i.getClass().getSimpleName(), i);
     }
@@ -2932,10 +3190,10 @@ class ASTConverter {
       CType pDeclarationType, CExpression pInitializerExpression) {
     return pDeclarationType.canBeAssignedFrom(pInitializerExpression.getExpressionType())
         || isStringInitialization(pDeclarationType, pInitializerExpression)
-        || ((pInitializerExpression instanceof CIntegerLiteralExpression)
+        || ((pInitializerExpression instanceof CIntegerLiteralExpression cIntegerLiteralExpression)
             // the literal '0' is by default treated as a Null-Pointer in context
             // of pointers (C-Standard 11 §6.3.2.3 (3))
-            && (((CIntegerLiteralExpression) pInitializerExpression).getValue().intValue() == 0)
+            && (cIntegerLiteralExpression.getValue().intValue() == 0)
             && pDeclarationType.canBeAssignedFrom(CPointerType.POINTER_TO_VOID));
   }
 
@@ -2958,13 +3216,13 @@ class ASTConverter {
       // neither array nor pointer and allows to drop a redundant second check for CArrayType or
       // CPointerType
       CType canonicalType = CPointerType.POINTER_TO_VOID;
-      if (pDeclarationType instanceof CArrayType) {
-        canonicalType = ((CArrayType) pDeclarationType).getType().getCanonicalType();
+      if (pDeclarationType instanceof CArrayType cArrayType) {
+        canonicalType = cArrayType.getType().getCanonicalType();
       }
-      if (pDeclarationType instanceof CPointerType) {
-        canonicalType = ((CPointerType) pDeclarationType).getType().getCanonicalType();
+      if (pDeclarationType instanceof CPointerType cPointerType) {
+        canonicalType = cPointerType.getType().getCanonicalType();
       }
-      return CTypes.copyDequalified(canonicalType).equals(CNumericTypes.CHAR);
+      return canonicalType.withoutQualifiers().equals(CNumericTypes.CHAR);
     }
     return false;
   }
@@ -2998,7 +3256,7 @@ class ASTConverter {
 
     CType type = declarator.type();
     if (type instanceof CFunctionTypeWithNames functionType) {
-      type = new CPointerType(false, false, functionType);
+      type = new CPointerType(CTypeQualifiers.NONE, functionType);
     }
 
     return new CParameterDeclaration(getLocation(p), type, declarator.name());
@@ -3030,5 +3288,406 @@ class ASTConverter {
     }
 
     return declarator.type();
+  }
+
+  /**
+   * A position within a composite type. The position can be any given member (named or unnamed)
+   * within a hierarchical structure of (potentially nested) composite types.
+   *
+   * <p>Example:
+   *
+   * <pre>
+   *   struct {
+   *     union { <--- potential position
+   *       int a; <--- potential position
+   *       struct { <- potential position
+   *         int b; <- potential position
+   *       }
+   *     };
+   *     int c; <----- potential position
+   *     struct { <--- potential position
+   *       int d; <--- potential position
+   *     }
+   *   }
+   * </pre>
+   */
+  private class PositionInComposite {
+    private final CCompositeType rootType;
+
+    /**
+     * Path encoding to the current position within the root type. The path is represented as a list
+     * of member indices, where each index represents the position within a composite type at that
+     * nesting level.
+     *
+     * <p>Path semantics:
+     *
+     * <ul>
+     *   <li>[i] - positioned at member i of the root type
+     *   <li>[i,j] - positioned at member j of member i
+     *   <li>[i,j,k] - positioned at member k of member j of member i
+     * </ul>
+     *
+     * <p>Examples:
+     *
+     * <pre>
+     *   struct {
+     *     struct { <--- position [0]
+     *       int a; <--- position [0,0]
+     *       struct { <- position [0,1]
+     *         int b; <- position [0,1,0]
+     *       }
+     *     };
+     *     int c[5]; <----- position [1]: 'c'. position [1, 0]: c[0]. position [1,3]: c[3]
+     *     union { <--- position [2]
+     *       int d; <--- position [2,0]
+     *     }
+     *   }
+     * </pre>
+     */
+    private Deque<Integer> path;
+
+    /**
+     * Creates a new position at the first direct member of the given type.
+     *
+     * @param pRootType the root type being initialized (canonical type must be a CCompositeType)
+     */
+    PositionInComposite(CType pRootType) {
+      if (!(pRootType.getCanonicalType() instanceof CCompositeType compositeType)) {
+        throw new IllegalArgumentException(
+            "Type must resolve to a composite type, but does not: "
+                + pRootType
+                + "(resolves to "
+                + pRootType.getCanonicalType()
+                + ")");
+      }
+      rootType = compositeType;
+      path = new ArrayDeque<>();
+      path.addLast(0);
+    }
+
+    /** Get the type of the (potentially nested) member at the current position. */
+    CType getCurrentType() {
+      return getTypeAt(path);
+    }
+
+    private CType getTypeAt(Iterable<Integer> pathToTraverse) {
+      CType currentType = rootType;
+
+      for (int memberIndex : pathToTraverse) {
+        verify(memberIndex >= 0);
+        if (currentType instanceof CCompositeType compositeType) {
+          List<CCompositeTypeMemberDeclaration> members = compositeType.getMembers();
+
+          if (memberIndex >= members.size()) {
+            throw new IndexOutOfBoundsException(
+                "Position out of bounds: index "
+                    + memberIndex
+                    + ", but type "
+                    + compositeType
+                    + " has only "
+                    + members.size()
+                    + " members");
+          }
+          currentType = members.get(memberIndex).getType().getCanonicalType();
+
+        } else if (currentType instanceof CArrayType arrayType) {
+          currentType = arrayType.getType().getCanonicalType();
+
+        } else {
+          throw new AssertionError(
+              "Cannot traverse into into non-composite, non-array type at index "
+                  + memberIndex
+                  + ": "
+                  + currentType);
+        }
+      }
+
+      return currentType;
+    }
+
+    /**
+     * Advance the position to the next element, following the semantics of C11 positional
+     * initializers.
+     *
+     * <p>For structs, the position moves to the next sibling member at the current nesting level.
+     * If no more siblings exist, it pops to the structural parent level and advances there.
+     *
+     * <p>For unions, the position always pops to the structural parent level and advances there.
+     *
+     * <p>Example:
+     *
+     * <pre>
+     * struct {
+     *   int a;
+     *   int b;
+     *   struct {
+     *     int x;
+     *     int y;
+     *   } n;
+     *   union {
+     *     int z;
+     *     int w;
+     *   } u;
+     *   int c;
+     * }
+     * </pre>
+     *
+     * <ul>
+     *   <li>At 'a' advance to 'b'
+     *   <li>At 'b' advance to 'n'
+     *   <li>At 'n.x' advance to 'n.y'
+     *   <li>At 'n.y' advance to 'u'. 'n.y' is the last sub-member, so pop to the parent struct and
+     *       advance to 'u')
+     *   <li>At 'u.z' advance to 'c'. 'u.z' is the only member initialized in the union, so pop to
+     *       the parent struct and advance to 'c')
+     * </ul>
+     *
+     * @see #advanceToScalar()
+     */
+    void advanceToNextElement() {
+      int currentPosition = path.getLast();
+      int nextPositionOnSameLevel = currentPosition + 1;
+
+      Deque<Integer> pathToParent = removeLastPosition(path);
+      CType parentType = getTypeAt(pathToParent);
+
+      int numberOfElementsInParents =
+          switch (parentType) {
+            case CCompositeType compositeType -> {
+              if (compositeType.getKind() == ComplexTypeKind.UNION) {
+                // For unions the next position is not the next member within the union,
+                // but the next sibling of that union.
+                yield 1;
+              } else {
+                yield compositeType.getMembers().size();
+              }
+            }
+            case CArrayType arrayType -> arrayType.getLengthAsInt().orElse(0);
+            default -> 1;
+          };
+
+      if (nextPositionOnSameLevel < numberOfElementsInParents) {
+        path.removeLast();
+        path.addLast(nextPositionOnSameLevel);
+      } else {
+        // 'pop out' and advance to the next element (to the sibling of the parent of the old
+        // position)
+        path.removeLast();
+        if (!path.isEmpty()) {
+          advanceToNextElement();
+        }
+      }
+    }
+
+    private Deque<Integer> removeLastPosition(Deque<Integer> sequence) {
+      Deque<Integer> result = new ArrayDeque<>(sequence);
+      result.removeLast();
+      return result;
+    }
+
+    /**
+     * Advances to the next scalar, if the current position is at an array or composite type. If the
+     * position already is at a scalar, nothing happens.
+     *
+     * <p>Example:
+     *
+     * <pre>
+     * struct {
+     *   int a;
+     *   struct {
+     *     struct {
+     *      int x;
+     *     } m;
+     *     int y;
+     *   } n;
+     * }
+     * </pre>
+     *
+     * <ul>
+     *   <li>At 'a' stays at 'a'.
+     *   <li>At 'n' advances to 'n.m.x'
+     * </ul>
+     *
+     * @see #advanceToNextElement()
+     */
+    void advanceToScalar() {
+      CType currentType = getCurrentType();
+      while (currentType.getCanonicalType() instanceof CCompositeType
+          || currentType.getCanonicalType() instanceof CArrayType) {
+        // Descend to the first member/element
+        path.add(0);
+        currentType = getCurrentType();
+      }
+    }
+
+    /**
+     * Jump to the next position after the given designated initializer.
+     *
+     * @param designatedInit the designated initializer
+     */
+    void jumpToPositionAfterDesignator(ICASTDesignatedInitializer designatedInit) {
+
+      jumpToDesignator(designatedInit.getDesignators(), rootType);
+      advanceToNextElement();
+    }
+
+    private void jumpToDesignator(ICASTDesignator[] designatorSequence, CType parentType) {
+      path = getMemberIndicesToDesignators(Arrays.asList(designatorSequence), parentType);
+    }
+
+    private Deque<Integer> getMemberIndicesToDesignators(
+        List<ICASTDesignator> designatorSequence, CType parentType) {
+      Deque<Integer> indices = new ArrayDeque<>(designatorSequence.size());
+      CType currentPositionType = parentType;
+      for (ICASTDesignator designator : designatorSequence) {
+        var nextIndexAndType = resolveIndicesOfDesignator(designator, currentPositionType);
+        indices.addAll(nextIndexAndType.getFirst());
+        currentPositionType = nextIndexAndType.getSecond();
+      }
+      return indices;
+    }
+
+    private Pair<List<Integer>, CType> resolveIndicesOfDesignator(
+        ICASTDesignator designator, CType parentType) {
+      CType currentType = parentType.getCanonicalType();
+      return switch (designator) {
+        case ICASTFieldDesignator fieldDesignator -> {
+          String targetFieldName = fieldDesignator.getName().toString();
+          yield resolveIndicesOfFieldDesignator(targetFieldName, currentType);
+        }
+
+        case ICASTArrayDesignator arrayDesignator ->
+            resolveIndicesOfArraySubscript(arrayDesignator.getSubscriptExpression(), currentType);
+
+        case IGCCASTArrayRangeDesignator rangeDesignator ->
+            resolveIndicesOfArraySubscript(rangeDesignator.getRangeCeiling(), currentType);
+        case null, default ->
+            throw new AssertionError("Unexpected designator in sequence: " + designator);
+      };
+    }
+
+    private Pair<List<Integer>, CType> resolveIndicesOfFieldDesignator(
+        String fieldName, CType parentType) {
+      if (!(parentType instanceof CCompositeType compositeType)) {
+        throw new AssertionError(
+            "No composite type trying to reach " + fieldName + ": " + parentType);
+      }
+
+      List<Pair<String, CType>> wayToCurrentField =
+          getWayToInnerField(compositeType, fieldName, new ArrayList<>());
+      Preconditions.checkState(!wayToCurrentField.isEmpty());
+      CType nextTypeInDelegatorList = wayToCurrentField.getLast().getSecond();
+      List<Integer> indices = getMemberIndicesToField(compositeType, wayToCurrentField);
+      return Pair.of(indices, nextTypeInDelegatorList);
+    }
+
+    private Pair<List<Integer>, CType> resolveIndicesOfArraySubscript(
+        IASTExpression subscriptExpression, CType type) {
+      if (!(type instanceof CArrayType arrayType)) {
+        throw new AssertionError(
+            "Expected array type for array subscript expression "
+                + subscriptExpression
+                + ", but got: "
+                + type);
+      }
+      int index = evaluateIntegerConstantExpression(subscriptExpression).intValueExact();
+      CType nextTypeInDelegatorList = arrayType.getType();
+      return Pair.of(ImmutableList.of(index), nextTypeInDelegatorList);
+    }
+
+    /**
+     * Returns the sequence of member indices that represent the named way to a field.
+     *
+     * <p>Example: Given the below struct as composite type and the way '.a.z.t', the method returns
+     * '[0, 2, 1]'
+     *
+     * <pre>
+     *   struct {
+     *     struct {
+     *       int x;
+     *       int y;
+     *       struct {
+     *         int s;
+     *         int t;
+     *       } z;
+     *     } a;
+     *   }
+     * </pre>
+     */
+    private @NonNull List<Integer> getMemberIndicesToField(
+        CCompositeType compositeType, List<Pair<String, CType>> wayToField) {
+
+      List<Integer> indices = new ArrayList<>();
+      CType currentType = compositeType;
+
+      for (Pair<String, CType> nextField : wayToField) {
+        String fieldName = nextField.getFirst();
+        if (!(currentType instanceof CCompositeType currentCompositeType)) {
+          throw new AssertionError(
+              "Cannot navigate through non-composite type "
+                  + currentType
+                  + " to reach field "
+                  + fieldName);
+        }
+
+        List<CCompositeTypeMemberDeclaration> members = currentCompositeType.getMembers();
+        int memberIndex = getMemberIndex(members, fieldName, currentCompositeType);
+
+        indices.addLast(memberIndex);
+        currentType = nextField.getSecond().getCanonicalType();
+      }
+      return indices;
+    }
+
+    private int getMemberIndex(
+        List<CCompositeTypeMemberDeclaration> members,
+        String fieldName,
+        CCompositeType currentComposite) {
+
+      for (int memberIndex = 0; memberIndex < members.size(); memberIndex++) {
+        CCompositeTypeMemberDeclaration member = members.get(memberIndex);
+        if (member.getName().equals(fieldName)) {
+          return memberIndex;
+        }
+      }
+      throw new AssertionError(
+          String.format("Field %s not found in composite type %s", fieldName, currentComposite));
+    }
+
+    /**
+     * Resolves the path to a field within a composite type, traversing anonymous structs/unions.
+     *
+     * @param owner the composite type to search in
+     * @param fieldName the name of the field to find
+     * @param allReferences accumulator list tracking the path to the field
+     * @return immutable list of (field name, field type) pairs representing the path, or empty if
+     *     field not found
+     */
+    static List<Pair<String, CType>> getWayToInnerField(
+        CCompositeType owner, String fieldName, List<Pair<String, CType>> allReferences) {
+      for (CCompositeTypeMemberDeclaration member : owner.getMembers()) {
+        if (member.getName().equals(fieldName)) {
+          allReferences.add(Pair.of(member.getName(), member.getType()));
+          return ImmutableList.copyOf(allReferences);
+        }
+      }
+
+      // no field found in current struct, so proceed to the structs/unions which are
+      // fields inside the current struct
+      for (CCompositeTypeMemberDeclaration member : owner.getMembers()) {
+        CType memberType = member.getType().getCanonicalType();
+        if (memberType instanceof CCompositeType cCompositeType
+            && member.getName().contains("__anon_type_member_")) {
+          List<Pair<String, CType>> tmp = new ArrayList<>(allReferences);
+          tmp.add(Pair.of(member.getName(), member.getType()));
+          tmp = getWayToInnerField(cCompositeType, fieldName, tmp);
+          if (!tmp.isEmpty()) {
+            return ImmutableList.copyOf(tmp);
+          }
+        }
+      }
+
+      return ImmutableList.of();
+    }
   }
 }
