@@ -12,7 +12,6 @@ import static com.google.common.collect.FluentIterable.from;
 import static com.google.common.truth.Truth.assert_;
 
 import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
 import java.nio.file.Files;
 import java.util.List;
 import org.junit.Test;
@@ -22,9 +21,9 @@ import org.sosy_lab.common.io.TempFile.DeleteOnCloseFile;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
 import org.sosy_lab.cpachecker.util.AbstractStates;
-import org.sosy_lab.cpachecker.util.test.CPATestRunner;
-import org.sosy_lab.cpachecker.util.test.TestDataTools;
-import org.sosy_lab.cpachecker.util.test.TestResults;
+import org.sosy_lab.cpachecker.util.test.IntegrationTestRunner;
+import org.sosy_lab.cpachecker.util.test.IntegrationTestRunner.IntegrationTestResult;
+import org.sosy_lab.cpachecker.util.test.TestUtils;
 
 public class CallstackTest {
 
@@ -34,32 +33,33 @@ public class CallstackTest {
    */
   @Test
   public void testCallstackPreventsUndesiredCoverage() throws Exception {
-    List<String> program =
-        ImmutableList.of(
-            "extern int __VERIFIER_nondet_int();",
-            "int global;",
-            "",
-            "void init() {",
-            // create two ARG paths
-            "  global = __VERIFIER_nondet_int() ? 1 : 2;",
-            "}",
-            "",
-            "void f() {",
-            // Set global variable to constant value such that one path can now cover the other.
-            // CallstackCPA should prevent coverage inside f because we entered f on two paths.
-            "  global = 3;",
-            "}",
-            "",
-            "void main() {",
-            "  init();",
-            "  f();",
-            "}");
+    String program =
+        """
+        extern int __VERIFIER_nondet_int();
+        int global;
+
+        void init() {
+          // create two ARG paths
+          global = __VERIFIER_nondet_int() ? 1 : 2;
+        }
+
+        void f() {
+          // Set global variable to constant value such that one path can now cover the other.
+          // CallstackCPA should prevent coverage inside f because we entered f on two paths.
+          global = 3;
+        }
+
+        void main() {
+          init();
+          f();
+        }
+        """;
     try (DeleteOnCloseFile programFile =
         TempFile.builder().prefix("test").suffix(".c").createDeleteOnClose()) {
-      Files.write(programFile.toPath(), program);
+      Files.writeString(programFile.toPath(), program);
 
       Configuration config =
-          TestDataTools.configurationForTest()
+          TestUtils.configurationForTest()
               //          .setOption("cpa.arg.keepCoveredStatesInReached", "true")
               .setOption("cpa", "cpa.arg.ARGCPA")
               .setOption("ARGCPA.cpa", "cpa.composite.CompositeCPA")
@@ -69,11 +69,12 @@ public class CallstackTest {
                       + " cpa.value.ValueAnalysisCPA")
               .build();
 
-      TestResults result = CPATestRunner.run(config, programFile.toPath().toString());
+      IntegrationTestResult result =
+          IntegrationTestRunner.run(config, programFile.toPath().toString());
       result.assertIsSafe();
 
       FluentIterable<ARGState> argStates =
-          from(result.getCheckerResult().getReached()).filter(ARGState.class);
+          from(result.cpaCheckerResult().getReached()).filter(ARGState.class);
       assert_()
           .withMessage("unexpected merged")
           .that(argStates.filter(s -> s.getParents().size() > 1))
@@ -82,7 +83,7 @@ public class CallstackTest {
       List<ARGState> coveredStates =
           argStates.transformAndConcat(ARGState::getCoveredByThis).toList();
       assert_().withMessage("exactly one covered state expected").that(coveredStates).hasSize(1);
-      CFANode coverageLocation = AbstractStates.extractLocation(coveredStates.get(0));
+      CFANode coverageLocation = AbstractStates.extractLocation(coveredStates.getFirst());
       assert_()
           .withMessage("expected coverage only in main")
           .that(coverageLocation.getFunctionName())
