@@ -14,7 +14,6 @@ import static org.sosy_lab.cpachecker.cpa.predicate.PredicateAbstractState.getPr
 import static org.sosy_lab.cpachecker.util.statistics.StatisticsUtils.div;
 
 import com.google.common.collect.HashMultimap;
-import com.google.common.collect.Lists;
 import com.google.common.collect.SetMultimap;
 import java.io.PrintStream;
 import java.util.ArrayDeque;
@@ -200,7 +199,7 @@ public class ImpactGlobalRefiner implements Refiner, StatisticsProvider {
 
       ARGState currentState = currentAbstractionState;
       do {
-        currentState = currentState.getParents().iterator().next();
+        currentState = currentState.getParents().getFirst();
       } while (!getPredicateState(currentState).isAbstractionState());
 
       if (!currentState.getParents().isEmpty() && !predecessors.containsKey(currentState)) {
@@ -314,7 +313,7 @@ public class ImpactGlobalRefiner implements Refiner, StatisticsProvider {
           break;
         }
       } finally {
-        itpStack.remove(itpStack.size() - 1);
+        itpStack.removeLast();
         itpProver.pop();
       }
     }
@@ -353,7 +352,7 @@ public class ImpactGlobalRefiner implements Refiner, StatisticsProvider {
     // going upwards from unreachableState refining states with interpolants
     ARGState currentState = unreachableState;
     do {
-      itpStack.remove(itpStack.size() - 1); // remove last
+      itpStack.removeLast(); // remove last
       currentState = predecessors.get(currentState);
       if (itpStack.isEmpty()) {
         assert currentState.getParents().isEmpty(); // we should have reached the ARG root
@@ -379,7 +378,7 @@ public class ImpactGlobalRefiner implements Refiner, StatisticsProvider {
     } while (!itpStack.isEmpty());
     totalNumberOfAffectedStates += affectedStates.size();
 
-    affectedStates = Lists.reverse(affectedStates); // reverse so that they are in top-down order
+    affectedStates = affectedStates.reversed(); // reverse so that they are in top-down order
 
     finishRefinementOfPath(unreachableState, affectedStates, reached);
   }
