@@ -25,7 +25,9 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.OptionalInt;
+import java.util.SequencedMap;
 import java.util.Set;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
@@ -63,8 +65,9 @@ import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.cpa.value.type.Value.UnknownValue;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap;
-import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.FormulaEncodingWithPointerAliasingOptions;
-import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.PointerTargetSet;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CFormulaEncodingWithPointerAliasingOptions;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.DynamicMemoryHandler;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.PointerBase;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.TypeHandlerWithPointerAliasing;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.java_smt.api.Model.ValueAssignment;
@@ -92,7 +95,7 @@ public class AssignmentToPathAllocator {
     machineModel = pMachineModel;
     TypeHandlerWithPointerAliasing typeHandler =
         new TypeHandlerWithPointerAliasing(
-            pLogger, pMachineModel, new FormulaEncodingWithPointerAliasingOptions(pConfig));
+            pLogger, pMachineModel, new CFormulaEncodingWithPointerAliasingOptions(pConfig));
     memoryName = exp -> typeHandler.getPointerAccessNameForType(typeHandler.getSimplifiedType(exp));
   }
 
@@ -118,10 +121,10 @@ public class AssignmentToPathAllocator {
     // Assignable Terms are needed, that's why we declare two maps of variables and functions. One
     // for the calculation of the SSAIndex, the other to save the references to the objects we want
     // to store in the concrete State, so we can avoid recreating those objects
-    final Map<String, ValueAssignment> variableEnvironment = new LinkedHashMap<>();
-    final Map<LeftHandSide, Object> variables = new LinkedHashMap<>();
+    final SequencedMap<String, ValueAssignment> variableEnvironment = new LinkedHashMap<>();
+    final SequencedMap<LeftHandSide, Object> variables = new LinkedHashMap<>();
     final SetMultimap<String, ValueAssignment> functionEnvironment = LinkedHashMultimap.create();
-    final Map<String, Map<Address, Object>> memory = new LinkedHashMap<>();
+    final SequencedMap<String, SequencedMap<Address, Object>> memory = new LinkedHashMap<>();
 
     int ssaMapIndex = 0;
 
@@ -187,7 +190,7 @@ public class AssignmentToPathAllocator {
 
     private final Multimap<String, ValueAssignment> uninterpretedFunctions;
 
-    public PredicateAnalysisConcreteExpressionEvaluator(
+    PredicateAnalysisConcreteExpressionEvaluator(
         Multimap<String, ValueAssignment> pUninterpretedFunction) {
       uninterpretedFunctions = pUninterpretedFunction;
     }
@@ -212,7 +215,7 @@ public class AssignmentToPathAllocator {
         String opString = binExp.getOperator().getOperator();
 
         switch (binExp.getOperator()) {
-          case MULTIPLY, MODULO, DIVIDE -> opString = "_" + opString;
+          case MULTIPLY, REMAINDER, DIVIDE -> opString = "_" + opString;
           default -> {
             // default
           }
@@ -290,17 +293,17 @@ public class AssignmentToPathAllocator {
 
     private Value asValue(Object pValue) {
 
-      if (!(pValue instanceof Number)) {
+      if (!(pValue instanceof Number number)) {
         return Value.UnknownValue.getInstance();
       }
 
-      return new NumericValue((Number) pValue);
+      return new NumericValue(number);
     }
 
     @Override
     public Value evaluate(AUnaryExpression pUnaryExpression, Value pOperand) {
 
-      if (!pOperand.isNumericValue()) {
+      if (!(pOperand instanceof NumericValue)) {
         return UnknownValue.getInstance();
       }
 
@@ -320,7 +323,7 @@ public class AssignmentToPathAllocator {
     @Override
     public Value evaluate(ACastExpression pCastExpression, Value pOperand) {
 
-      if (!pOperand.isNumericValue()) {
+      if (!(pOperand instanceof NumericValue)) {
         return UnknownValue.getInstance();
       }
 
@@ -354,10 +357,10 @@ public class AssignmentToPathAllocator {
     boolean isReference = references.size() > IS_FIELD_REFERENCE;
 
     if (isNotGlobal) {
-      function = nameAndFunction.get(0);
+      function = nameAndFunction.getFirst();
       name = nameAndFunction.get(1);
     } else {
-      name = nameAndFunction.get(0);
+      name = nameAndFunction.getFirst();
     }
 
     if (isReference) {
@@ -395,10 +398,10 @@ public class AssignmentToPathAllocator {
   /** We need the variableEnvironment and functionEnvironment for their SSAIndeces. */
   private void createAssignments(
       ImmutableCollection<ValueAssignment> terms,
-      Map<String, ValueAssignment> variableEnvironment,
-      Map<LeftHandSide, Object> pVariables,
+      SequencedMap<String, ValueAssignment> variableEnvironment,
+      SequencedMap<LeftHandSide, Object> pVariables,
       Multimap<String, ValueAssignment> functionEnvironment,
-      Map<String, Map<Address, Object>> memory) {
+      SequencedMap<String, SequencedMap<Address, Object>> memory) {
 
     for (final ValueAssignment term : terms) {
       String name = term.getName();
@@ -461,10 +464,11 @@ public class AssignmentToPathAllocator {
   }
 
   private void addHeapValue(
-      Map<String, Map<Address, Object>> memory, ValueAssignment pFunctionAssignment) {
+      SequencedMap<String, SequencedMap<Address, Object>> memory,
+      ValueAssignment pFunctionAssignment) {
     String heapName = getName(pFunctionAssignment);
 
-    Map<Address, Object> heap = memory.get(heapName);
+    SequencedMap<Address, Object> heap = memory.get(heapName);
     if (heap == null) {
       heap = new LinkedHashMap<>();
       memory.put(heapName, heap);
@@ -484,14 +488,14 @@ public class AssignmentToPathAllocator {
 
     for (ValueAssignment constant : assignableTerms.getConstants()) {
       String name = FormulaManagerView.parseName(constant.getName()).getFirst();
-      if (PointerTargetSet.isBaseName(name)) {
+      Optional<PointerBase> potentialBase = PointerBase.fromFormulaEncoding(name);
+      if (potentialBase.isPresent()) {
         assert FormulaManagerView.parseName(constant.getName()).getSecond().isEmpty();
-        if (!PointerTargetSet.isMallocBase(name)) {
+        if (!DynamicMemoryHandler.isAllocBase(potentialBase.orElseThrow())) {
           Address address = Address.valueOf(constant.getValue());
 
           // TODO ugly, refactor?
-          String constantName = PointerTargetSet.getBase(name);
-          LeftHandSide leftHandSide = createLeftHandSide(constantName);
+          LeftHandSide leftHandSide = createLeftHandSide(potentialBase.orElseThrow().name());
           addressOfVariables.put(leftHandSide, address);
         }
       }
@@ -612,13 +616,17 @@ public class AssignmentToPathAllocator {
     return result;
   }
 
+  public MachineModel getMachineModel() {
+    return machineModel;
+  }
+
   private static final class AssignableTermsInPath {
 
     private final ImmutableSetMultimap<Integer, ValueAssignment> assignableTermsAtPosition;
     private final ImmutableSet<ValueAssignment> constants;
     private final ImmutableSet<ValueAssignment> ufFunctionsWithoutSSAIndex;
 
-    public AssignableTermsInPath(
+    AssignableTermsInPath(
         ImmutableSetMultimap<Integer, ValueAssignment> pAssignableTermsAtPosition,
         ImmutableSet<ValueAssignment> pConstants,
         ImmutableSet<ValueAssignment> pUfFunctionsWithoutSSAIndex) {
@@ -628,16 +636,16 @@ public class AssignmentToPathAllocator {
       ufFunctionsWithoutSSAIndex = pUfFunctionsWithoutSSAIndex;
     }
 
-    public ImmutableSetMultimap<Integer, ValueAssignment> getAssignableTermsAtPosition() {
+    ImmutableSetMultimap<Integer, ValueAssignment> getAssignableTermsAtPosition() {
       return assignableTermsAtPosition;
     }
 
-    public ImmutableSet<ValueAssignment> getConstants() {
+    ImmutableSet<ValueAssignment> getConstants() {
       return constants;
     }
 
     @SuppressWarnings("unused")
-    public ImmutableSet<ValueAssignment> getUfFunctionsWithoutSSAIndex() {
+    ImmutableSet<ValueAssignment> getUfFunctionsWithoutSSAIndex() {
       return ufFunctionsWithoutSSAIndex;
     }
 
