@@ -8,7 +8,10 @@
 
 package org.sosy_lab.cpachecker.util.predicates.interpolation;
 
+import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.Preconditions.checkElementIndex;
 import static com.google.common.base.Preconditions.checkNotNull;
+import static com.google.common.base.Preconditions.checkState;
 import static com.google.common.base.Verify.verify;
 import static com.google.common.collect.FluentIterable.from;
 import static org.sosy_lab.common.collect.Collections3.listAndElement;
@@ -18,11 +21,12 @@ import com.google.common.base.Preconditions;
 import com.google.common.base.Throwables;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMultiset;
+import com.google.common.collect.Iterables;
 import com.google.common.collect.Iterators;
 import com.google.common.collect.Lists;
+import com.google.common.collect.ObjectArrays;
 import com.google.common.primitives.ImmutableIntArray;
 import com.google.common.primitives.Ints;
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -75,7 +79,6 @@ import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
 import org.sosy_lab.cpachecker.util.statistics.StatisticsWriter;
 import org.sosy_lab.cpachecker.util.variableclassification.VariableClassification;
-import org.sosy_lab.java_smt.api.BasicProverEnvironment;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.InterpolatingProverEnvironment;
 import org.sosy_lab.java_smt.api.Model;
@@ -247,12 +250,24 @@ public final class InterpolationManager {
               + " counterexample without interpolation")
   private boolean tryWithoutInterpolation = true;
 
+  private final boolean enableCounterexampleAnalysis;
   private final ITPStrategy itpStrategy;
 
   private final ExecutorService executor;
   private final LoopStructure loopStructure;
   private final VariableClassification variableClassification;
 
+  private final ProverOptions[] proverOptions;
+
+  /**
+   * Create an instance. This instance is reusable for several calls, and reusing it enables
+   * features such as reusing the solver's prover environment.
+   *
+   * @param pEnableCounterexampleAnalysis Whether to enable counterexample analysis (computing
+   *     precise error paths). Without this, only interpolation is allowed and the "build
+   *     counterexample trace" methods can not be called, but interpolation might be a little bit
+   *     more efficient.
+   */
   public InterpolationManager(
       PathFormulaManager pPmgr,
       Solver pSolver,
@@ -260,10 +275,12 @@ public final class InterpolationManager {
       Optional<VariableClassification> pVarClassification,
       Configuration config,
       ShutdownNotifier pShutdownNotifier,
-      LogManager pLogger)
+      LogManager pLogger,
+      boolean pEnableCounterexampleAnalysis)
       throws InvalidConfigurationException {
     config.inject(this, InterpolationManager.class);
 
+    enableCounterexampleAnalysis = pEnableCounterexampleAnalysis;
     logger = pLogger;
     shutdownNotifier = pShutdownNotifier;
     fmgr = pSolver.getFormulaManager();
@@ -273,12 +290,18 @@ public final class InterpolationManager {
     loopStructure = pLoopStructure.orElse(null);
     variableClassification = pVarClassification.orElse(null);
 
+    proverOptions =
+        enableCounterexampleAnalysis
+            ? new ProverOptions[] {ProverOptions.GENERATE_MODELS}
+            : new ProverOptions[] {};
+
     if (itpTimeLimit.isEmpty()) {
       executor = null;
     } else {
       // important to use daemon threads here, because we never have the chance to stop the executor
       executor =
-          Executors.newSingleThreadExecutor(new ThreadFactoryBuilder().setDaemon(true).build());
+          Executors.newSingleThreadExecutor(
+              Thread.ofPlatform().daemon().name(getClass().getSimpleName() + "-thread").factory());
     }
 
     if (reuseInterpolationEnvironment) {
@@ -309,23 +332,28 @@ public final class InterpolationManager {
    * will be thrown, but if only computing a precise counterexample fails, an imprecise
    * counterexample is returned (no exception is thrown).
    *
+   * <p>Calling this method requires that {@code pEnableCounterexampleAnalysis} was set to {@code
+   * true} when this instance was created.
+   *
    * @param pFormulas the formulas for the path
    * @param pAbstractionStates the abstraction states between the formulas and the last state of the
    *     path. The first state (root) of the path is missing, because it is always TRUE. This is
    *     optionally used for heuristics for getting better interpolants by reordering formulas.
    * @param pImprecisePath A (potentially wrong) ARG path that ends in the target state and is used
-   *     as base for computing the precise path. If no path is passed, no attempt at computing a
-   *     precise path is made and one can likely call {@link #interpolate(List, List)} instead.
+   *     as base for computing the precise path.
    */
   public CounterexampleTraceInfo buildCounterexampleTrace(
       final BlockFormulas pFormulas,
-      final List<AbstractState> pAbstractionStates,
-      final Optional<ARGPath> pImprecisePath)
+      final List<? extends AbstractState> pAbstractionStates,
+      final ARGPath pImprecisePath)
       throws CPAException, InterruptedException {
-    assert pAbstractionStates.isEmpty() || pFormulas.getSize() == pAbstractionStates.size();
+    checkState(
+        enableCounterexampleAnalysis,
+        "Need to set pEnableCounterexampleAnalysis=true when creating InterpolationManager");
 
     return callWithTimelimit(
-        () -> buildCounterexampleTrace0(pFormulas, pAbstractionStates, pImprecisePath));
+        () ->
+            buildCounterexampleTrace0(pFormulas, pAbstractionStates, Optional.of(pImprecisePath)));
   }
 
   private CounterexampleTraceInfo callWithTimelimit(Callable<CounterexampleTraceInfo> callable)
@@ -369,10 +397,13 @@ public final class InterpolationManager {
    * Compute an inductive sequence of interpolants for a given list of formulas. The conjunction of
    * the formulas is first checked for satisfiability, it is not necessary to do this before calling
    * this method. Note that if the formulas represent a potential error path, calling {@link
-   * #buildCounterexampleTrace(BlockFormulas, List, Optional)} instead and passing an {@link
-   * ARGPath} instance would give additional information in case the path is feasible. If
-   * abstraction states are available, please call {@link #interpolate(List, List)} to enable more
-   * heuristics.
+   * #buildCounterexampleTrace(BlockFormulas, List, ARGPath)} instead with an {@link ARGPath}
+   * instance would give additional information in case the path is feasible. If abstraction states
+   * are available, please call {@link #interpolate(List, List)} to enable more heuristics.
+   *
+   * <p>This method can be called even if {@code pEnableCounterexampleAnalysis} was set to {@code
+   * false} when this instance was created. And it is recommended to do so if only the interpolate
+   * methods are called.
    *
    * @return <code>Optional.empty()</code> if the conjunction of the given formulas is satisfiable,
    *     interpolants otherwise (as list with n-1 elements)
@@ -387,8 +418,12 @@ public final class InterpolationManager {
    * Compute an inductive sequence of interpolants for a given list of formulas. The conjunction of
    * the formulas is first checked for satisfiability, it is not necessary to do this before calling
    * this method. Note that if the formulas represent a potential error path, calling {@link
-   * #buildCounterexampleTrace(BlockFormulas, List, Optional)} instead and passing an {@link
-   * ARGPath} instance would give additional information in case the path is feasible.
+   * #buildCounterexampleTrace(BlockFormulas, List, ARGPath)} instead with an {@link ARGPath}
+   * instance would give additional information in case the path is feasible.
+   *
+   * <p>This method can be called even if {@code pEnableCounterexampleAnalysis} was set to {@code
+   * false} when this instance was created. And it is recommended to do so if only the interpolate
+   * methods are called.
    *
    * @param pAbstractionStates the abstraction states between the formulas and the last state of the
    *     path. The first state (root) of the path is missing, because it is always TRUE. This is
@@ -401,8 +436,10 @@ public final class InterpolationManager {
       final List<BooleanFormula> pFormulas, final List<AbstractState> pAbstractionStates)
       throws CPAException, InterruptedException {
     CounterexampleTraceInfo cexInfo =
-        buildCounterexampleTrace(
-            new BlockFormulas(pFormulas), pAbstractionStates, Optional.empty());
+        callWithTimelimit(
+            () ->
+                buildCounterexampleTrace0(
+                    new BlockFormulas(pFormulas), pAbstractionStates, Optional.empty()));
     if (cexInfo.isSpurious()) {
       return Optional.of(cexInfo.getInterpolants());
     } else {
@@ -412,9 +449,10 @@ public final class InterpolationManager {
 
   private CounterexampleTraceInfo buildCounterexampleTrace0(
       final BlockFormulas pFormulas,
-      final List<AbstractState> pAbstractionStates,
+      final List<? extends AbstractState> pAbstractionStates,
       final Optional<ARGPath> imprecisePath)
       throws RefinementFailedException, InterruptedException {
+    checkArgument(pAbstractionStates.isEmpty() || pFormulas.getSize() == pAbstractionStates.size());
 
     if (pFormulas.getSize() == 1) {
       // If there is only one block, interpolation is meaningless because the list of expected
@@ -473,7 +511,7 @@ public final class InterpolationManager {
    * possible, but do not bother computing interpolants. This method exists even though it does not
    * really fit into a class named {@link InterpolationManager} because it is useful for refiners
    * that want the same kind of counterexample analysis as {@link
-   * #buildCounterexampleTrace(BlockFormulas, List, Optional)} provides, but do not need
+   * #buildCounterexampleTrace(BlockFormulas, List, ARGPath)} provides, but do not need
    * interpolants, and it is easy to reuse the code here because we need it anyway as fallback if
    * interpolation fails.
    *
@@ -481,16 +519,22 @@ public final class InterpolationManager {
    * a precise counterexample fails, an imprecise counterexample is returned (no exception is
    * thrown).
    *
+   * <p>Calling this method requires that {@code pEnableCounterexampleAnalysis} was set to {@code
+   * true} when this instance was created.
+   *
    * @param pFormulas the formulas for the path
    * @param imprecisePath A (potentially wrong) ARG path that ends in the target state and is used
    *     as base for computing the precise path.
    */
   public CounterexampleTraceInfo buildCounterexampleTraceWithoutInterpolation(
-      final BlockFormulas pFormulas, Optional<ARGPath> imprecisePath)
+      final BlockFormulas pFormulas, ARGPath imprecisePath)
       throws CPAException, InterruptedException {
+    checkState(
+        enableCounterexampleAnalysis,
+        "Need to set pEnableCounterexampleAnalysis=true when creating InterpolationManager");
 
     return callWithTimelimit(
-        () -> buildCounterexampleTraceWithoutInterpolation0(pFormulas, imprecisePath));
+        () -> buildCounterexampleTraceWithoutInterpolation0(pFormulas, Optional.of(imprecisePath)));
   }
 
   private CounterexampleTraceInfo buildCounterexampleTraceWithoutInterpolation0(
@@ -502,6 +546,7 @@ public final class InterpolationManager {
       final BlockFormulas f = prepareCounterexampleFormulas(pFormulas);
 
       try {
+        // TODO Maybe solveCounterexampleAndFindInfeasibleBlock is worth it for some callers?
         return solveCounterexample(f, imprecisePath);
       } catch (SolverException e) {
         // TODO: Do we need to rebuild the interpolator here? i.e. is it ever used again?
@@ -551,19 +596,22 @@ public final class InterpolationManager {
       BlockFormulas f, Optional<ARGPath> imprecisePath, SolverException itpException)
       throws InterruptedException, RefinementFailedException {
     try {
-      CounterexampleTraceInfo counterexample = solveCounterexample(f, imprecisePath);
-      if (!counterexample.isSpurious()) {
+      CounterexampleTraceInfo counterexample =
+          solveCounterexampleAndFindInfeasibleBlock(f, imprecisePath);
+      if (!counterexample.isSpurious() || counterexample.getInterpolants() != null) {
         return counterexample;
       }
     } catch (SolverException solvingException) {
       // in case of exception throw original one below but do not forget e2
       itpException.addSuppressed(solvingException);
     }
+
     throw RefinementFailedException.forInterpolationFailureInSolver(itpException, solver);
   }
 
   /**
-   * Analyze a counterexample for feasibility without computing interpolants.
+   * Analyze a counterexample for feasibility without using solver interpolation. If the
+   * counterexample is feasible, a precise path in it is searched and returned.s
    *
    * @throws SolverException If the solver fails to solve the formulas. (If it solves successfully
    *     but fails to compute a model, an imprecise counterexample is returned instead.)
@@ -572,7 +620,45 @@ public final class InterpolationManager {
       BlockFormulas f, Optional<ARGPath> imprecisePath)
       throws SolverException, InterruptedException {
 
-    try (ProverEnvironment prover = solver.newProverEnvironment(ProverOptions.GENERATE_MODELS)) {
+    if (f.getFormulas().size() == 1) {
+      // Optimized case for single-block path to make use of cache in solver.isUnsat().
+      // This cache can then be reused by the abstraction computation
+      // (which will attempt to solve exactly the same formula again if it is unsat).
+
+      CounterexampleTraceInfo[] feasibleResult = {
+        CounterexampleTraceInfo.feasibleImprecise(f.getFormulas()), // default value for sat result
+      };
+      Solver.ModelCallback callbackOnSat = null;
+      if (imprecisePath.isPresent()) {
+        callbackOnSat =
+            model -> {
+              satCheckTimer.stop(); // stop before calling getPreciseErrorPath
+              try {
+                feasibleResult[0] = getPreciseErrorPath(f, model, imprecisePath.orElseThrow());
+              } catch (SolverException modelException) {
+                logger.logUserException(
+                    Level.WARNING, modelException, "Could not create model for error path!");
+              }
+            };
+      }
+
+      final boolean isSat;
+
+      satCheckTimer.start();
+      try {
+        isSat = !solver.isUnsat(Iterables.getOnlyElement(f.getFormulas()), callbackOnSat);
+      } finally {
+        satCheckTimer.stopIfRunning(); // can already be stopped in callback
+      }
+
+      if (isSat) {
+        return feasibleResult[0]; // result from getPreciseErrorPath() or imprecise default
+      } else {
+        return CounterexampleTraceInfo.infeasible(ImmutableList.of());
+      }
+    }
+
+    try (ProverEnvironment prover = solver.newProverEnvironment(proverOptions)) {
       final boolean isSat;
 
       satCheckTimer.start();
@@ -586,8 +672,11 @@ public final class InterpolationManager {
       }
 
       if (isSat) {
-        try {
-          return getErrorPath(f, prover, imprecisePath);
+        if (imprecisePath.isEmpty()) {
+          return CounterexampleTraceInfo.feasibleImprecise(f.getFormulas());
+        }
+        try (Model model = prover.getModel()) {
+          return getPreciseErrorPath(f, model, imprecisePath.orElseThrow());
         } catch (SolverException modelException) {
           logger.logUserException(
               Level.WARNING, modelException, "Could not create model for error path!");
@@ -597,6 +686,103 @@ public final class InterpolationManager {
         return CounterexampleTraceInfo.infeasibleNoItp();
       }
     }
+  }
+
+  /**
+   * Analyze a counterexample for feasibility without using solver interpolation. If the
+   * counterexample is feasible, a precise path in it is searched and returned. If the
+   * counterexample is infeasible the method attempts to find a block that is in itself infeasible
+   * and provides a trivial but correct interpolant in this case.
+   *
+   * @throws SolverException If the solver fails to solve the formulas. (If it solves successfully
+   *     but fails to compute a model, an imprecise counterexample is returned instead.)
+   */
+  private CounterexampleTraceInfo solveCounterexampleAndFindInfeasibleBlock(
+      BlockFormulas f, Optional<ARGPath> imprecisePath)
+      throws SolverException, InterruptedException {
+    assert f.getFormulas().size() > 1 : "Should have called solveCounterexample for single block";
+
+    ProverOptions[] localProverOptions =
+        ObjectArrays.concat(proverOptions, ProverOptions.GENERATE_UNSAT_CORE_OVER_ASSUMPTIONS);
+    try (ProverEnvironment prover = solver.newProverEnvironment(localProverOptions)) {
+      final List<BooleanFormula> blockPredicates = new ArrayList<>(f.getSize());
+      final boolean isSat;
+      final Optional<List<BooleanFormula>> unsatBlocks;
+
+      satCheckTimer.start();
+      try {
+        int i = 0;
+        for (BooleanFormula block : f.getFormulas()) {
+          // For each block, add "pred_i => block_i".
+          // Then block_i is only relevant if pred_i is asserted.
+          BooleanFormula blockPredicate = bfmgr.makeVariable("__BLOCK__PREDICATE__" + i++);
+          blockPredicates.add(blockPredicate);
+          prover.push(bfmgr.implication(blockPredicate, block));
+        }
+        unsatBlocks = prover.unsatCoreOverAssumptions(blockPredicates);
+        isSat = unsatBlocks.isEmpty();
+      } finally {
+        satCheckTimer.stop();
+      }
+
+      if (isSat) {
+        if (imprecisePath.isEmpty()) {
+          return CounterexampleTraceInfo.feasibleImprecise(f.getFormulas());
+        }
+        try (Model model = prover.getModel()) {
+          return getPreciseErrorPath(f, model, imprecisePath.orElseThrow());
+        } catch (SolverException modelException) {
+          logger.logUserException(
+              Level.WARNING, modelException, "Could not create model for error path!");
+          return CounterexampleTraceInfo.feasibleImprecise(f.getFormulas());
+        }
+
+      } else {
+        if (unsatBlocks.orElseThrow().size() == 1) {
+          // Unsat core already tells us which block is infeasible. Use the free information.
+          int index = blockPredicates.indexOf(unsatBlocks.orElseThrow().getFirst());
+          return createTrivialFalseInterpolant(index, f);
+
+        } else {
+          // Unsat cores might not be precise, try finding an unsat block.
+          // We could restrict the search to blocks that are in the unsat core,
+          // but in principle there could also be an unsat block outside of the unsat code.
+          logger.log(
+              Level.FINEST,
+              "Infeasible counterexample but interpolation has failed. "
+                  + "Trying to find an infeasible block.");
+          for (int i = 0; i < f.getSize(); i++) {
+            if (prover.isUnsatWithAssumptions(ImmutableList.of(blockPredicates.get(i)))) {
+              return createTrivialFalseInterpolant(i, f);
+            }
+          }
+          logger.log(
+              Level.FINEST,
+              "Infeasible counterexample but interpolation has failed "
+                  + "and no block is infeasible in itself.");
+        }
+
+        return CounterexampleTraceInfo.infeasibleNoItp();
+      }
+    }
+  }
+
+  /**
+   * Create a sequence of interpolants for the given formulas, of which the first interpolants are
+   * "true" and from a given formula on the interpolants are "false".
+   */
+  private CounterexampleTraceInfo createTrivialFalseInterpolant(
+      int firstInfeasibleBlock, BlockFormulas f) {
+    checkElementIndex(firstInfeasibleBlock, f.getSize());
+    int itpLength = f.getSize() - 1;
+    logger.log(Level.FINEST, "Block", firstInfeasibleBlock, "out of", f.getSize(), "is infeasible");
+    List<BooleanFormula> itps =
+        ImmutableList.<BooleanFormula>builderWithExpectedSize(itpLength)
+            .addAll(Collections.nCopies(firstInfeasibleBlock, bfmgr.makeTrue()))
+            .addAll(Collections.nCopies(itpLength - firstInfeasibleBlock, bfmgr.makeFalse()))
+            .build();
+    verify(itps.size() == itpLength);
+    return CounterexampleTraceInfo.infeasible(itps);
   }
 
   /**
@@ -621,8 +807,7 @@ public final class InterpolationManager {
     if (!bfmgr.isTrue(bitwiseAxioms)) {
       logger.log(
           Level.ALL, "DEBUG_3", "ADDING BITWISE AXIOMS TO THE", "LAST GROUP: ", bitwiseAxioms);
-      return listAndElement(
-          f.subList(0, f.size() - 1), bfmgr.and(f.get(f.size() - 1), bitwiseAxioms));
+      return listAndElement(f.subList(0, f.size() - 1), bfmgr.and(f.getLast(), bitwiseAxioms));
     }
 
     return f;
@@ -749,7 +934,8 @@ public final class InterpolationManager {
    *     original list as third element of the pair.
    */
   private ImmutableIntArray orderFormulas(
-      final List<BooleanFormula> traceFormulas, final List<AbstractState> pAbstractionStates) {
+      final List<BooleanFormula> traceFormulas,
+      final List<? extends AbstractState> pAbstractionStates) {
 
     // In this list are all formulas together with their position in the original list
     ImmutableIntArray result =
@@ -800,30 +986,24 @@ public final class InterpolationManager {
   }
 
   /**
-   * Get information about the error path from the solver after the formulas have been proved to be
-   * satisfiable.
+   * Get information about the error path from the solver's model after the formulas have been
+   * proved to be satisfiable and determine a precise feasible path through the ARG to the same
+   * target state.
    *
    * @param formulas The list of formulas on the path.
-   * @param pProver The solver.
-   * @param pImprecisePath An optional (potentially infeasible) path to the target state. If given,
-   *     the model of the prover environment is used to determine a feasible path through the ARG to
-   *     the same target state.
+   * @param model The model.
+   * @param imprecisePath A (potentially infeasible) path to the target state.
    * @return Information about the error path, including a satisfying assignment.
    * @throws SolverException If the solver fails to produce a model.
    */
-  private CounterexampleTraceInfo getErrorPath(
-      BlockFormulas formulas, BasicProverEnvironment<?> pProver, Optional<ARGPath> pImprecisePath)
+  private CounterexampleTraceInfo getPreciseErrorPath(
+      BlockFormulas formulas, Model model, ARGPath imprecisePath)
       throws SolverException, InterruptedException {
-
-    if (pImprecisePath.isEmpty()) {
-      return CounterexampleTraceInfo.feasibleImprecise(formulas.getFormulas());
-    }
 
     errorPathCreationTimer.start();
     try {
-      ARGPath imprecisePath = pImprecisePath.orElseThrow();
       Set<ARGState> pathElements = ARGUtils.getAllStatesOnPathsTo(imprecisePath.getLastState());
-      try (Model model = pProver.getModel()) {
+      try {
         ARGPath precisePath =
             pmgr.getARGPathFromModel(
                 model,
@@ -852,10 +1032,10 @@ public final class InterpolationManager {
   }
 
   /** Helper method to dump a list of formulas to files. */
-  private void dumpInterpolationProblem(List<BooleanFormula> f) {
+  private void dumpInterpolationProblem(String name, List<BooleanFormula> f) {
     int k = 0;
     for (BooleanFormula formula : f) {
-      dumpFormulaToFile("formula", formula, k++);
+      dumpFormulaToFile(name, formula, k++);
     }
   }
 
@@ -894,7 +1074,7 @@ public final class InterpolationManager {
       // This is safe because we don't actually care about the value of T,
       // only the InterpolatingProverEnvironment itself cares about it.
       return (InterpolatingProverEnvironment<T>)
-          solver.newProverEnvironmentWithInterpolation(ProverOptions.GENERATE_MODELS);
+          solver.newProverEnvironmentWithInterpolation(proverOptions);
     }
 
     /**
@@ -930,7 +1110,7 @@ public final class InterpolationManager {
      */
     private CounterexampleTraceInfo buildCounterexampleTrace(
         BlockFormulas formulas,
-        List<AbstractState> pAbstractionStates,
+        List<? extends AbstractState> pAbstractionStates,
         Optional<ARGPath> imprecisePath)
         throws SolverException, InterruptedException {
 
@@ -964,7 +1144,7 @@ public final class InterpolationManager {
         }
 
         if (dumpInterpolationProblems) {
-          dumpInterpolationProblem(formulas.getFormulas());
+          dumpInterpolationProblem("formula", formulas.getFormulas());
         }
 
         // compute permutation in which formulas should be added
@@ -1044,12 +1224,21 @@ public final class InterpolationManager {
             logger.log(Level.ALL, "For step", i++, "got:", "interpolant", itp);
           }
         }
+        if (dumpInterpolationProblems) {
+          dumpInterpolationProblem("interpolant", interpolants);
+        }
 
         info = CounterexampleTraceInfo.infeasible(interpolants);
 
       } else {
         // this is a real bug
-        info = getErrorPath(formulas, itpProver, imprecisePath);
+        if (imprecisePath.isEmpty()) {
+          info = CounterexampleTraceInfo.feasibleImprecise(formulas.getFormulas());
+        } else {
+          try (Model model = itpProver.getModel()) {
+            info = getPreciseErrorPath(formulas, model, imprecisePath.orElseThrow());
+          }
+        }
       }
 
       logger.log(Level.ALL, "Counterexample information:", info);
@@ -1071,7 +1260,7 @@ public final class InterpolationManager {
      */
     private boolean checkInfeasabilityOfTrace(
         final List<BooleanFormula> traceFormulas,
-        final List<AbstractState> traceStates,
+        final List<? extends AbstractState> traceStates,
         final ImmutableIntArray formulaPermutation,
         final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds)
         throws InterruptedException, SolverException {
@@ -1111,7 +1300,7 @@ public final class InterpolationManager {
      */
     private int getIndexOfFirstNonReusableFormula(
         final List<BooleanFormula> traceFormulas,
-        final List<AbstractState> traceStates,
+        final List<? extends AbstractState> traceStates,
         final ListIterator<Integer> todoIterator,
         final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds) {
 
@@ -1189,7 +1378,7 @@ public final class InterpolationManager {
      */
     private void addNewFormulasToStack(
         final List<BooleanFormula> traceFormulas,
-        final List<AbstractState> traceStates,
+        final List<? extends AbstractState> traceStates,
         final ListIterator<Integer> todoIterator,
         final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds)
         throws SolverException, InterruptedException {
