@@ -11,10 +11,7 @@ package org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula;
 import static com.google.common.base.Verify.verify;
 import static org.sosy_lab.cpachecker.util.BuiltinFloatFunctions.getTypeOfBuiltinFloatFunction;
 import static org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.CtoFormulaTypeUtils.getRealFieldOwner;
-import static org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.FormulaEncodingOptions.INTERNAL_NONDET_FUNCTION_NAME;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import java.math.BigInteger;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
@@ -27,6 +24,7 @@ import java.util.logging.Level;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression.BinaryOperator;
+import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpressionBuilder;
 import org.sosy_lab.cpachecker.cfa.ast.c.CCastExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CCharLiteralExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CDeclaration;
@@ -34,11 +32,14 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CEnumerator;
 import org.sosy_lab.cpachecker.cfa.ast.c.CExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFieldReference;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFloatLiteralExpression;
+import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionCallAssignmentStatement;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionCallExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.c.CIdExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CImaginaryLiteralExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CIntegerLiteralExpression;
+import org.sosy_lab.cpachecker.cfa.ast.c.CLeftHandSide;
+import org.sosy_lab.cpachecker.cfa.ast.c.CRightHandSide;
 import org.sosy_lab.cpachecker.cfa.ast.c.CRightHandSideVisitor;
 import org.sosy_lab.cpachecker.cfa.ast.c.CSimpleDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.c.CStringLiteralExpression;
@@ -50,22 +51,23 @@ import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.types.BaseSizeofVisitor;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
 import org.sosy_lab.cpachecker.cfa.types.c.CArrayType;
-import org.sosy_lab.cpachecker.cfa.types.c.CComplexType.ComplexTypeKind;
 import org.sosy_lab.cpachecker.cfa.types.c.CCompositeType;
 import org.sosy_lab.cpachecker.cfa.types.c.CCompositeType.CCompositeTypeMemberDeclaration;
-import org.sosy_lab.cpachecker.cfa.types.c.CElaboratedType;
-import org.sosy_lab.cpachecker.cfa.types.c.CFunctionType;
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
-import org.sosy_lab.cpachecker.cfa.types.c.CTypedefType;
 import org.sosy_lab.cpachecker.cfa.types.c.CTypes;
+import org.sosy_lab.cpachecker.cfa.types.c.CVoidType;
 import org.sosy_lab.cpachecker.exceptions.NoException;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.exceptions.UnsupportedCodeException;
+import org.sosy_lab.cpachecker.util.BuiltinAtomicFunctions;
+import org.sosy_lab.cpachecker.util.BuiltinAtomicFunctions.CAtomicOperationType;
+import org.sosy_lab.cpachecker.util.BuiltinAtomicFunctions.CAtomicOperations;
 import org.sosy_lab.cpachecker.util.BuiltinFloatFunctions;
 import org.sosy_lab.cpachecker.util.BuiltinFunctions;
+import org.sosy_lab.cpachecker.util.BuiltinIoFunctions;
 import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.ErrorConditions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap.SSAMapBuilder;
@@ -179,11 +181,11 @@ public class ExpressionToFormulaVisitor
     final CType calculationType = exp.getCalculationType();
 
     // these operators expect numeric arguments
-    final FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
+    final FormulaType<?> returnFormulaType = conv.getFormulaTypeFromType(returnType);
 
     final boolean signed;
-    if (calculationType instanceof CSimpleType) {
-      signed = conv.machineModel.isSigned((CSimpleType) calculationType);
+    if (calculationType instanceof CSimpleType cSimpleType) {
+      signed = conv.machineModel.isSigned(cSimpleType);
     } else {
       // For pointers: happens only for additions/subtractions (for which signedness is irrelevant)
       // and comparisons. GCC implements pointer comparisons as unsigned.
@@ -202,7 +204,7 @@ public class ExpressionToFormulaVisitor
         if (!(promT1 instanceof CPointerType)
             && !(promT2 instanceof CPointerType)) { // Just an addition e.g. 6 + 7
           ret = mgr.makePlus(f1, f2);
-        } else if (!(promT2 instanceof CPointerType)) {
+        } else if (!(promT2 instanceof CPointerType cPointerType)) {
           // operand1 is a pointer => we should multiply the second summand by the size of the
           // pointer target
           ret =
@@ -211,9 +213,7 @@ public class ExpressionToFormulaVisitor
         } else if (!(promT1 instanceof CPointerType)) {
           // operand2 is a pointer => we should multiply the first summand by the size of the
           // pointer target
-          ret =
-              mgr.makePlus(
-                  f2, mgr.makeMultiply(f1, getSizeExpression(((CPointerType) promT2).getType())));
+          ret = mgr.makePlus(f2, mgr.makeMultiply(f1, getSizeExpression(cPointerType.getType())));
         } else {
           throw new UnrecognizedCodeException("Can't add pointers", edge, exp);
         }
@@ -228,14 +228,12 @@ public class ExpressionToFormulaVisitor
           ret =
               mgr.makeMinus(
                   f1, mgr.makeMultiply(f2, getSizeExpression(((CPointerType) promT1).getType())));
-        } else if (promT1 instanceof CPointerType) {
+        } else if (promT1 instanceof CPointerType cPointerType) {
           // Pointer subtraction => (operand1 - operand2) / sizeof (*operand1)
           if (promT1.equals(promT2)) {
             ret =
                 mgr.makeDivide(
-                    mgr.makeMinus(f1, f2),
-                    getSizeExpression(((CPointerType) promT1).getType()),
-                    true);
+                    mgr.makeMinus(f1, f2), getSizeExpression(cPointerType.getType()), true);
           } else {
             throw new UnrecognizedCodeException(
                 "Can't subtract pointers of different types", edge, exp);
@@ -247,15 +245,15 @@ public class ExpressionToFormulaVisitor
       }
       case MULTIPLY -> ret = mgr.makeMultiply(f1, f2);
       case DIVIDE -> ret = mgr.makeDivide(f1, f2, signed);
-      case MODULO -> {
+      case REMAINDER -> {
         // Modulo in C is remainder in SMTLIB2
         ret = mgr.makeRemainder(f1, f2, signed);
 
         addModuloConstraints(exp, f1, f2, signed, ret);
       }
-      case BINARY_AND -> ret = mgr.makeAnd(f1, f2);
-      case BINARY_OR -> ret = mgr.makeOr(f1, f2);
-      case BINARY_XOR -> ret = mgr.makeXor(f1, f2);
+      case BITWISE_AND -> ret = mgr.makeAnd(f1, f2);
+      case BITWISE_OR -> ret = mgr.makeOr(f1, f2);
+      case BITWISE_XOR -> ret = mgr.makeXor(f1, f2);
       case SHIFT_LEFT ->
           // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
           ret = mgr.makeShiftLeft(f1, f2);
@@ -299,7 +297,7 @@ public class ExpressionToFormulaVisitor
     CExpression e2 = exp.getOperand2();
     if (e2.equals(CIntegerLiteralExpression.ZERO)
         && e1 instanceof CBinaryExpression or
-        && ((CBinaryExpression) e1).getOperator() == BinaryOperator.BINARY_OR) {
+        && ((CBinaryExpression) e1).getOperator() == BinaryOperator.BITWISE_OR) {
       // This is code like "(a | b) == 0".
       // According to LDV, GCC sometimes produces this during weaving,
       // but for non-bitprecise analysis it can be handled in a better way as (a == 0) || (b == 0).
@@ -329,9 +327,9 @@ public class ExpressionToFormulaVisitor
       final Formula ret) {
     BooleanFormulaManagerView bfmgr = mgr.getBooleanFormulaManager();
 
-    if (exp.getOperand2() instanceof CIntegerLiteralExpression) {
+    if (exp.getOperand2() instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
       // We use a BigInteger because it can always be made positive, this is not true for type long!
-      BigInteger modulo = ((CIntegerLiteralExpression) exp.getOperand2()).getValue();
+      BigInteger modulo = cIntegerLiteralExpression.getValue();
       if (!modulo.equals(BigInteger.ZERO)) {
         // modular congruence expects a positive modulo. If our divisor b in a%b is negative, we
         // actually want to generate a modular congruence condition mod (-b):
@@ -391,7 +389,7 @@ public class ExpressionToFormulaVisitor
 
     if (idExp.getDeclaration() instanceof CEnumerator enumerator) {
       CType t = idExp.getExpressionType();
-      return mgr.makeNumber(conv.getFormulaTypeFromCType(t), enumerator.getValue());
+      return mgr.makeNumber(conv.getFormulaTypeFromType(t), enumerator.getValue());
     }
 
     return conv.makeVariable(
@@ -407,9 +405,9 @@ public class ExpressionToFormulaVisitor
     }
 
     CExpression fieldRef = fExp.getFieldOwner();
-    if (fieldRef instanceof CIdExpression) {
-      CSimpleDeclaration decl = ((CIdExpression) fieldRef).getDeclaration();
-      if (decl instanceof CDeclaration && ((CDeclaration) decl).isGlobal()) {
+    if (fieldRef instanceof CIdExpression cIdExpression) {
+      CSimpleDeclaration decl = cIdExpression.getDeclaration();
+      if (decl instanceof CDeclaration cDeclaration && cDeclaration.isGlobal()) {
         // this is the reference to a global field variable
 
         // we can omit the warning (no pointers involved),
@@ -425,13 +423,13 @@ public class ExpressionToFormulaVisitor
   @Override
   public Formula visit(CCharLiteralExpression cExp) throws UnrecognizedCodeException {
     // we just take the byte value
-    FormulaType<?> t = conv.getFormulaTypeFromCType(cExp.getExpressionType());
+    FormulaType<?> t = conv.getFormulaTypeFromType(cExp.getExpressionType());
     return mgr.makeNumber(t, cExp.getCharacter());
   }
 
   @Override
   public Formula visit(CIntegerLiteralExpression iExp) throws UnrecognizedCodeException {
-    FormulaType<?> t = conv.getFormulaTypeFromCType(iExp.getExpressionType());
+    FormulaType<?> t = conv.getFormulaTypeFromType(iExp.getExpressionType());
     return mgr.makeNumber(t, iExp.getValue());
   }
 
@@ -449,8 +447,9 @@ public class ExpressionToFormulaVisitor
     return fmgr.makeNumber(
         converted.getExponent(),
         converted.getMantissa(),
-        converted.getSign(),
-        FormulaType.getFloatingPointType(value.getFormat().expBits(), value.getFormat().sigBits()));
+        converted.getMathSign(),
+        FormulaType.getFloatingPointTypeFromSizesWithoutHiddenBit(
+            value.getFormat().expBits(), value.getFormat().sigBits()));
   }
 
   @Override
@@ -484,7 +483,7 @@ public class ExpressionToFormulaVisitor
         }
 
         CType returnType = exp.getExpressionType();
-        FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
+        FormulaType<?> returnFormulaType = conv.getFormulaTypeFromType(returnType);
         if (!returnFormulaType.equals(mgr.getFormulaType(ret))) {
           ret = conv.makeCast(promoted, returnType, ret, constraints, edge);
         }
@@ -632,7 +631,7 @@ public class ExpressionToFormulaVisitor
 
   private Formula handleAlignOf(CExpression pExp, CType pCType) {
     return mgr.makeNumber(
-        conv.getFormulaTypeFromCType(pExp.getExpressionType()),
+        conv.getFormulaTypeFromType(pExp.getExpressionType()),
         conv.machineModel.getAlignof(pCType));
   }
 
@@ -644,8 +643,8 @@ public class ExpressionToFormulaVisitor
 
     // First let's handle special cases such as assumes, allocations, nondets, external models, etc.
     final String functionName;
-    if (functionNameExpression instanceof CIdExpression) {
-      functionName = ((CIdExpression) functionNameExpression).getName();
+    if (functionNameExpression instanceof CIdExpression cIdExpression) {
+      functionName = cIdExpression.getName();
 
       if (conv.options.isNondetFunction(functionName)
           || conv.options.isMemoryAllocationFunction(functionName)
@@ -655,70 +654,25 @@ public class ExpressionToFormulaVisitor
         // Ignore parameters and just create a fresh variable for it.
         return conv.makeNondet(functionName, returnType, ssa, constraints);
 
-      } else if (BuiltinFunctions.matchesFscanf(functionName)) {
+      } else if (BuiltinIoFunctions.matchesFscanf(functionName)) {
+        CFunctionCallAssignmentStatement nondetCallForScanfCall =
+            BuiltinIoFunctions.createNondetCallModellingFscanf(e, edge);
 
-        ValidatedFScanFParameter receivingParameter = validateFscanfParameters(parameters, e);
-
-        if (receivingParameter.receiver() instanceof CUnaryExpression unaryParameter) {
-          UnaryOperator operator = unaryParameter.getOperator();
-          CExpression operand = unaryParameter.getOperand();
-          if (operator.equals(UnaryOperator.AMPER)
-              && operand instanceof CIdExpression idExpression) {
-            // For simplicity, we start with the case where only parameters of the form "&id" occur
-            CType variableType = idExpression.getExpressionType();
-
-            if (!isCompatibleWithScanfFormatString(receivingParameter.format(), variableType)) {
-              throw new UnsupportedCodeException(
-                  "fscanf with receiving type <-> format specifier mismatch is not supported.",
+        try {
+          BooleanFormula assignment =
+              conv.makeAssignment(
+                  nondetCallForScanfCall.getLeftHandSide(),
+                  nondetCallForScanfCall.getLeftHandSide(),
+                  nondetCallForScanfCall.getRightHandSide(),
                   edge,
-                  e);
-            }
-
-            CFunctionDeclaration nondetFun =
-                new CFunctionDeclaration(
-                    edge.getFileLocation(),
-                    CFunctionType.functionTypeWithReturnType(variableType),
-                    INTERNAL_NONDET_FUNCTION_NAME,
-                    ImmutableList.of(),
-                    ImmutableSet.of());
-            CIdExpression nondetFunctionName =
-                new CIdExpression(
-                    edge.getFileLocation(), variableType, nondetFun.getName(), nondetFun);
-
-            CFunctionCallExpression rhs =
-                new CFunctionCallExpression(
-                    edge.getFileLocation(),
-                    variableType,
-                    nondetFunctionName,
-                    ImmutableList.of(),
-                    nondetFun);
-            try {
-              BooleanFormula assignment =
-                  conv.makeAssignment(
-                      idExpression,
-                      idExpression,
-                      rhs,
-                      edge,
-                      function,
-                      ssa,
-                      pts,
-                      constraints,
-                      errorConditions);
-              constraints.addConstraint(assignment);
-            } catch (InterruptedException interruptedException) {
-              CtoFormulaConverter.propagateInterruptedException(interruptedException);
-            }
-          } else {
-            throw new UnsupportedCodeException(
-                "Currently, only fscanf with a single parameter of the form &id is supported.",
-                edge,
-                e);
-          }
-        } else {
-          throw new UnsupportedCodeException(
-              "Currently, only fscanf with a single parameter of the form &id is supported.",
-              edge,
-              e);
+                  function,
+                  ssa,
+                  pts,
+                  constraints,
+                  errorConditions);
+          constraints.addConstraint(assignment);
+        } catch (InterruptedException interruptedException) {
+          CtoFormulaConverter.propagateInterruptedException(interruptedException);
         }
 
         // fscanf(FILE *stream, const char *format, ...) returns the number of assigned items
@@ -729,12 +683,12 @@ public class ExpressionToFormulaVisitor
       } else if (conv.options.isExternModelFunction(functionName)) {
         ExternModelLoader loader = new ExternModelLoader(conv, conv.bfmgr, conv.fmgr);
         BooleanFormula result = loader.handleExternModelFunction(parameters, ssa);
-        FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(e.getExpressionType());
+        FormulaType<?> returnFormulaType = conv.getFormulaTypeFromType(e.getExpressionType());
         return conv.ifTrueThenOneElseZero(returnFormulaType, result);
 
       } else if (BuiltinFunctions.isSetjmpFunction(functionName)) {
         // setjmp always returns 0 on the "regular" return, and we don't support longjmp
-        return mgr.makeNumber(conv.getFormulaTypeFromCType(returnType), 0);
+        return mgr.makeNumber(conv.getFormulaTypeFromType(returnType), 0);
 
       } else if (BuiltinFunctions.isPopcountFunction(functionName)) {
         return handlePopCount(functionName, returnType, parameters, e);
@@ -743,10 +697,10 @@ public class ExpressionToFormulaVisitor
         if (parameters.isEmpty()) {
           CType resultType = getTypeOfBuiltinFloatFunction(functionName);
 
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(resultType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(resultType);
           if (formulaType.isFloatingPointType()) {
             return mgr.getFloatingPointFormulaManager()
-                .makePlusInfinity((FormulaType.FloatingPointType) formulaType);
+                .makePlusInfinity((FloatingPointType) formulaType);
           }
         }
 
@@ -755,10 +709,10 @@ public class ExpressionToFormulaVisitor
         if (parameters.isEmpty()) {
           CType resultType = getTypeOfBuiltinFloatFunction(functionName);
 
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(resultType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(resultType);
           if (formulaType.isFloatingPointType()) {
             return mgr.getFloatingPointFormulaManager()
-                .makePlusInfinity((FormulaType.FloatingPointType) formulaType);
+                .makePlusInfinity((FloatingPointType) formulaType);
           }
         }
 
@@ -767,10 +721,9 @@ public class ExpressionToFormulaVisitor
         if (parameters.size() == 1) {
           CType resultType = getTypeOfBuiltinFloatFunction(functionName);
 
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(resultType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(resultType);
           if (formulaType.isFloatingPointType()) {
-            return mgr.getFloatingPointFormulaManager()
-                .makeNaN((FormulaType.FloatingPointType) formulaType);
+            return mgr.getFloatingPointFormulaManager().makeNaN((FloatingPointType) formulaType);
           }
         }
 
@@ -778,14 +731,13 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 1) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
-            FloatingPointFormula zero =
-                fpfmgr.makeNumber(0.0, (FormulaType.FloatingPointType) formulaType);
-            FloatingPointFormula nan = fpfmgr.makeNaN((FormulaType.FloatingPointType) formulaType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
+            FloatingPointFormula zero = fpfmgr.makeNumber(0.0, (FloatingPointType) formulaType);
+            FloatingPointFormula nan = fpfmgr.makeNaN((FloatingPointType) formulaType);
 
             BooleanFormula isNegative =
                 mgr.makeOr(
@@ -803,13 +755,13 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 1) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
-            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
             return conv.bfmgr.ifThenElse(
                 conv.bfmgr.or(fpfmgr.isInfinity(param), fpfmgr.isNaN(param)),
                 mgr.makeNumber(resultType, 0),
@@ -821,13 +773,13 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 1) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
-            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
             return conv.bfmgr.ifThenElse(
                 fpfmgr.isNaN(param), mgr.makeNumber(resultType, 1), mgr.makeNumber(resultType, 0));
           }
@@ -837,15 +789,14 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 1) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
-            FloatingPointFormula fp_zero =
-                fpfmgr.makeNumber(0, (FormulaType.FloatingPointType) formulaType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
+            FloatingPointFormula fp_zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
 
-            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
             Formula zero = mgr.makeNumber(resultType, 0);
             Formula one = mgr.makeNumber(resultType, 1);
             Formula minus_one = mgr.makeNumber(resultType, -1);
@@ -861,15 +812,14 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 1) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
-            FloatingPointFormula fp_zero =
-                fpfmgr.makeNumber(0, (FormulaType.FloatingPointType) formulaType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
+            FloatingPointFormula fp_zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
 
-            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
             Formula zero = mgr.makeNumber(resultType, 0);
             Formula one = mgr.makeNumber(resultType, 1);
             Formula minus_one = mgr.makeNumber(resultType, -1);
@@ -885,13 +835,13 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 1) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
-            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
             Formula zero = mgr.makeNumber(resultType, 0);
             Formula one = mgr.makeNumber(resultType, 1);
             Formula two = mgr.makeNumber(resultType, 2);
@@ -915,16 +865,15 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 2) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
-            FloatingPointFormula zero =
-                fpfmgr.makeNumber(0.0, (FormulaType.FloatingPointType) formulaType);
+            FloatingPointFormula zero = fpfmgr.makeNumber(0.0, (FloatingPointType) formulaType);
             FloatingPointFormula anything =
                 (FloatingPointFormula)
                     conv.makeNondet(functionName + "_NondetAnything", paramType, ssa, constraints);
@@ -956,11 +905,11 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 2) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -1005,11 +954,11 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 2) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -1027,11 +976,11 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 2) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -1050,15 +999,14 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 2) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
-            FloatingPointFormula zero =
-                fpfmgr.makeNumber(0, (FormulaType.FloatingPointType) formulaType);
+            FloatingPointFormula zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
 
             BooleanFormula isFirstNaN = fpfmgr.isNaN(param0);
             BooleanFormula isSecondNaN = fpfmgr.isNaN(param1);
@@ -1124,15 +1072,15 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 2) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
-            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
             Formula zero = mgr.makeNumber(resultType, 0);
             Formula one = mgr.makeNumber(resultType, 1);
 
@@ -1144,14 +1092,14 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 1) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula fp_zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
 
-            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
             Formula zero = mgr.makeNumber(resultType, 0);
             Formula not_zero =
                 conv.makeNondet(functionName + "_NonZero", CNumericTypes.INT, ssa, constraints);
@@ -1175,11 +1123,11 @@ public class ExpressionToFormulaVisitor
 
         if (parameters.size() == 2) {
           CType paramType = getTypeOfBuiltinFloatFunction(functionName);
-          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FloatingPointFormula zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
             FloatingPointFormula nan = fpfmgr.makeNaN((FloatingPointType) formulaType);
@@ -1245,6 +1193,10 @@ public class ExpressionToFormulaVisitor
         // which will be run in parallel, tracks the actual target of the pointer and makes sure
         // that the right function is always called.
         return conv.makeNondet(functionName, returnType, ssa, constraints);
+
+      } else if (CAtomicOperations.fromString(functionName).isPresent()) {
+        return atomicOperation(
+            e, parameters, returnType, CAtomicOperations.fromString(functionName).orElseThrow());
 
       } else if (!CtoFormulaConverter.PURE_EXTERNAL_FUNCTIONS.contains(functionName)) {
         if (parameters.isEmpty()) {
@@ -1326,93 +1278,312 @@ public class ExpressionToFormulaVisitor
       assert !formalParameterTypesIt.hasNext() && !parametersIt.hasNext();
 
       final CType realReturnType = conv.getReturnType(e, edge);
-      final FormulaType<?> resultFormulaType = conv.getFormulaTypeFromCType(realReturnType);
+      final FormulaType<?> resultFormulaType = conv.getFormulaTypeFromType(realReturnType);
       return conv.ffmgr.declareAndCallUF(functionName, resultFormulaType, arguments);
     }
   }
 
-  private record ValidatedFScanFParameter(String format, CExpression receiver) {}
+  /**
+   * Encode a call to one of the GCC atomic builtins, cf. {@link BuiltinAtomicFunctions}.
+   *
+   * <p>CPAchecker assumes sequential consistency, so any other memory order is rejected and the
+   * fences are no-ops. The actual semantics of each builtin is expressed as plain C expressions by
+   * {@link BuiltinAtomicFunctions}; this method only turns those into formulas.
+   */
+  private Formula atomicOperation(
+      CFunctionCallExpression e,
+      List<CExpression> parameters,
+      CType returnType,
+      CAtomicOperations operation)
+      throws UnrecognizedCodeException {
+    if (parameters.size() < operation.getMinimumArgumentCount()) {
+      throw new UnrecognizedCodeException(
+          "Atomic builtin " + operation.getRepresentation() + " called with too few arguments",
+          edge,
+          e);
+    }
+    if (parameters.size() > operation.getMaximumArgumentCount()) {
+      throw new UnrecognizedCodeException(
+          "Atomic builtin " + operation.getRepresentation() + " called with too many arguments",
+          edge,
+          e);
+    }
+    for (int memoryOrderIndex : operation.getMemoryOrderIndices()) {
+      checkSequentiallyConsistent(e, parameters, memoryOrderIndex, operation);
+    }
+
+    CExpression pointerParam = parameters.getFirst();
+    return switch (operation.getOperationType()) {
+      case LOAD ->
+          atomicLoad(
+              operation,
+              pointerParam,
+              operation.isGeneric() ? parameters.get(1) : null,
+              returnType);
+      case STORE -> {
+        atomicStore(pointerParam, valueOperand(operation, parameters, 1));
+        yield voidResult(returnType);
+      }
+      case EXCHANGE ->
+          atomicExchange(
+              operation,
+              pointerParam,
+              parameters.get(1),
+              operation.isGeneric() ? parameters.get(2) : null,
+              returnType);
+      case CMP_XCHG ->
+          atomicCompareExchange(
+              e,
+              pointerParam,
+              parameters.get(1),
+              valueOperand(operation, parameters, 2),
+              weakOperand(operation, parameters),
+              returnType);
+      case FETCH_OP, OP_FETCH -> atomicFetch(operation, pointerParam, parameters.get(1));
+      case TEST_AND_SET -> atomicTestAndSet(pointerParam, returnType);
+      case CLEAR -> {
+        atomicClear(pointerParam);
+        yield voidResult(returnType);
+      }
+      // Under sequential consistency every access is already ordered, so a fence constrains
+      // nothing and needs no encoding.
+      case FENCE -> voidResult(returnType);
+    };
+  }
+
+  /** {@code __atomic_load_n(ptr, order)} and {@code __atomic_load(ptr, result, order)}. */
+  private Formula atomicLoad(
+      CAtomicOperations operation,
+      CExpression pointerParam,
+      @Nullable CExpression resultParam,
+      CType returnType)
+      throws UnrecognizedCodeException {
+    CLeftHandSide source = BuiltinAtomicFunctions.getPointerTarget(pointerParam);
+    if (operation.isGeneric()) {
+      // the generic form does not return the value but writes it through the second pointer
+      atomicAssign(BuiltinAtomicFunctions.getPointerTarget(resultParam), source);
+      return voidResult(returnType);
+    }
+    return processOperand(source, returnType, returnType);
+  }
+
+  /** {@code __atomic_store_n(ptr, value, order)} and {@code __atomic_store(ptr, value, order)}. */
+  private void atomicStore(CExpression pointerParam, CExpression valueParam)
+      throws UnrecognizedCodeException {
+    CLeftHandSide target = BuiltinAtomicFunctions.getPointerTarget(pointerParam);
+    atomicAssign(target, valueParam);
+  }
 
   /**
-   * Checks whether the format specifier in the second argument of fscanf agrees with the type of
-   * the parameter it writes to. Paragraph § 7.21.6.2 (10) of the C Standard says, that input item
-   * read form the stream is converted to the `appropriate` type according to the conversion
-   * specifier, e.g., %d. Further § 7.21.6.2 (11-12) tells us the expected argument (receiver) type
-   * for each argument, corresponding to a conversion specifier and length modifier .The exact
-   * mapping brought forward by the standard is reflected in {@link
-   * BuiltinFunctions#getTypeFromScanfFormatSpecifier(String)}.
-   *
-   * @param formatString the scanf format string
-   * @param pVariableType the type of the receiving variable
-   * @return whether the scanf-format-specifier agrees with the type it writes to
-   * @throws UnsupportedCodeException if the format specifier is not supported
+   * {@code __atomic_exchange_n(ptr, value, order)} and {@code __atomic_exchange(ptr, value, result,
+   * order)}, which write {@code value} to {@code *ptr} and yield the previous value.
    */
-  private boolean isCompatibleWithScanfFormatString(String formatString, CType pVariableType)
+  private Formula atomicExchange(
+      CAtomicOperations operation,
+      CExpression pointerParam,
+      CExpression valueParam,
+      @Nullable CExpression resultParam,
+      CType returnType)
+      throws UnrecognizedCodeException {
+    CLeftHandSide target = BuiltinAtomicFunctions.getPointerTarget(pointerParam);
+    if (operation.isGeneric()) {
+      CLeftHandSide value = BuiltinAtomicFunctions.getPointerTarget(valueParam);
+      CLeftHandSide result = BuiltinAtomicFunctions.getPointerTarget(resultParam);
+      // GCC requires the three objects to be distinct, so the old value may be copied out first
+      atomicAssign(result, target);
+      atomicAssign(target, value);
+      return voidResult(returnType);
+    }
+    // read the old value before the assignment assigns a fresh SSA index to the target
+    Formula old = processOperand(target, returnType, returnType);
+    atomicAssign(target, valueParam);
+    return old;
+  }
+
+  /**
+   * The fetch builtins, which update {@code *ptr} with an arithmetic operation. The {@code
+   * __atomic_fetch_op} variants yield the value from before the update, the {@code
+   * __atomic_op_fetch} variants the one from after it.
+   */
+  private Formula atomicFetch(
+      CAtomicOperations operation, CExpression pointerParam, CExpression valueParam)
+      throws UnrecognizedCodeException {
+    CLeftHandSide target = BuiltinAtomicFunctions.getPointerTarget(pointerParam);
+    CExpression updated =
+        BuiltinAtomicFunctions.getUpdatedValue(
+            new CBinaryExpressionBuilder(conv.machineModel, conv.logger),
+            operation,
+            target,
+            valueParam);
+
+    // both values have to be read before the assignment assigns a fresh SSA index to the target
+    Formula oldValue = toFormula(target);
+    Formula newValue = toFormula(updated);
+    atomicAssign(target, updated);
+
+    return operation.getOperationType() == CAtomicOperationType.FETCH_OP ? oldValue : newValue;
+  }
+
+  /**
+   * The compare-exchange builtins, which write {@code desired} to {@code *ptr} if it equals {@code
+   * *expected}, and otherwise write the current value of {@code *ptr} to {@code *expected}. The
+   * result reports whether the exchange happened.
+   */
+  private Formula atomicCompareExchange(
+      CFunctionCallExpression e,
+      CExpression pointerParam,
+      CExpression expectedParam,
+      CExpression desired,
+      Optional<CExpression> weakParam,
+      CType returnType)
+      throws UnrecognizedCodeException {
+    if (weakParam.isPresent()) {
+      CExpression weak = weakParam.orElseThrow();
+      if (!(weak instanceof CIntegerLiteralExpression weakValue)
+          || !weakValue.getValue().equals(BigInteger.ZERO)) {
+        // a weak compare-exchange may fail spuriously, which we would have to model as nondet
+        throw new UnsupportedCodeException("Weak compare-exchange is not supported", edge, e);
+      }
+    }
+
+    CLeftHandSide target = BuiltinAtomicFunctions.getPointerTarget(pointerParam);
+    CLeftHandSide expected = BuiltinAtomicFunctions.getPointerTarget(expectedParam);
+
+    // The new values are conditional and thus have no CExpression form that makeAssignment could
+    // take, so the operands are converted explicitly, each cast to the type of the target.
+    CType type = target.getExpressionType();
+    Formula oldValue = processOperand(target, type, type);
+    Formula expectedValue = processOperand(expected, type, type);
+    Formula desiredValue = processOperand(desired, type, type);
+    BooleanFormula succeeds = conv.fmgr.makeEqual(oldValue, expectedValue);
+
+    FormulaType<?> resultType = conv.getFormulaTypeFromType(returnType);
+    Formula result =
+        conv.bfmgr.ifThenElse(
+            succeeds, mgr.makeNumber(resultType, 1), mgr.makeNumber(resultType, 0));
+
+    // all reads happen above, so the lvalue terms may now assign fresh SSA indices
+    Formula targetLvalue =
+        conv.buildLvalueTerm(target, edge, function, ssa, pts, constraints, errorConditions);
+    constraints.addConstraint(
+        conv.fmgr.assignment(
+            targetLvalue, conv.bfmgr.ifThenElse(succeeds, desiredValue, oldValue)));
+    Formula expectedLvalue =
+        conv.buildLvalueTerm(expected, edge, function, ssa, pts, constraints, errorConditions);
+    constraints.addConstraint(
+        conv.fmgr.assignment(
+            expectedLvalue, conv.bfmgr.ifThenElse(succeeds, expectedValue, oldValue)));
+
+    return result;
+  }
+
+  /**
+   * {@code __atomic_test_and_set(ptr, order)}, which sets {@code *ptr} and yields whether it had
+   * already been set.
+   *
+   * <p>The return type is always {@code _Bool} (cf. {@link BuiltinAtomicFunctions#getType}), so the
+   * only meaningful encoding of "set" is {@code 1}: the C standard converts any nonzero value to
+   * {@code 1} on assignment to a {@code _Bool} regardless of which nonzero value an implementation
+   * physically stores.
+   */
+  private Formula atomicTestAndSet(CExpression pointerParam, CType returnType)
+      throws UnrecognizedCodeException {
+    CLeftHandSide target = BuiltinAtomicFunctions.getPointerTarget(pointerParam);
+    CType type = target.getExpressionType();
+
+    // read the old value before the assignment assigns a fresh SSA index to the target
+    Formula oldValue = processOperand(target, type, type);
+    atomicAssign(target, CIntegerLiteralExpression.createDummyLiteral(1, type));
+
+    Formula zero = mgr.makeNumber(conv.getFormulaTypeFromType(type), 0);
+    FormulaType<?> resultType = conv.getFormulaTypeFromType(returnType);
+    return conv.bfmgr.ifThenElse(
+        mgr.makeNot(mgr.makeEqual(oldValue, zero)),
+        mgr.makeNumber(resultType, 1),
+        mgr.makeNumber(resultType, 0));
+  }
+
+  /** {@code __atomic_clear(ptr, order)}, which clears the flag stored in {@code *ptr}. */
+  private void atomicClear(CExpression pointerParam) throws UnrecognizedCodeException {
+    CLeftHandSide target = BuiltinAtomicFunctions.getPointerTarget(pointerParam);
+    atomicAssign(
+        target, CIntegerLiteralExpression.createDummyLiteral(0, target.getExpressionType()));
+  }
+
+  /**
+   * The value operand of an atomic builtin, which the generic forms pass by pointer and the {@code
+   * _n} forms by value.
+   */
+  private CExpression valueOperand(
+      CAtomicOperations operation, List<CExpression> parameters, int index)
+      throws UnrecognizedCodeException {
+    CExpression operand = parameters.get(index);
+    return operation.isGeneric() ? BuiltinAtomicFunctions.getPointerTarget(operand) : operand;
+  }
+
+  /**
+   * The {@code weak} operand of a compare-exchange builtin, absent if the call omits its trailing
+   * arguments.
+   */
+  private static Optional<CExpression> weakOperand(
+      CAtomicOperations operation, List<CExpression> parameters) {
+    return operation.getWeakArgumentIndex().stream()
+        .filter(index -> parameters.size() > index)
+        .mapToObj(parameters::get)
+        .findFirst();
+  }
+
+  /** Add the constraint that an atomic builtin assigns {@code rhs} to {@code lhs}. */
+  private void atomicAssign(CLeftHandSide lhs, CRightHandSide rhs)
+      throws UnrecognizedCodeException {
+    try {
+      constraints.addConstraint(
+          conv.makeAssignment(
+              lhs, lhs, rhs, edge, function, ssa, pts, constraints, errorConditions));
+    } catch (InterruptedException interruptedException) {
+      throw CtoFormulaConverter.propagateInterruptedException(interruptedException);
+    }
+  }
+
+  /**
+   * The result of an atomic builtin that returns {@code void}. Well-formed C never uses this value,
+   * but the visitor has to return some formula, so a fixed constant is used instead of a needless
+   * fresh nondeterministic variable.
+   */
+  private Formula voidResult(CType returnType) {
+    CType type =
+        returnType.getCanonicalType() instanceof CVoidType ? CNumericTypes.INT : returnType;
+    return mgr.makeNumber(conv.getFormulaTypeFromType(type), 0);
+  }
+
+  /**
+   * Reject an atomic builtin whose memory-order argument at {@code pIndex} is not {@code
+   * __ATOMIC_SEQ_CST}.
+   *
+   * <p>The memory order is inserted by the preprocessor and is therefore always an integer literal;
+   * a non-literal is rejected as well, because we then cannot show that it is sequentially
+   * consistent.
+   */
+  private void checkSequentiallyConsistent(
+      CFunctionCallExpression pCall,
+      List<CExpression> pParameters,
+      int pIndex,
+      CAtomicOperations pOperation)
       throws UnsupportedCodeException {
-    CType expectedType =
-        BuiltinFunctions.getTypeFromScanfFormatSpecifier(formatString)
-            .orElseThrow(
-                () ->
-                    new UnsupportedCodeException(
-                        "format specifier " + formatString + " not supported.", edge));
-
-    return pVariableType.getCanonicalType().equals(expectedType.getCanonicalType());
-  }
-
-  private ValidatedFScanFParameter validateFscanfParameters(
-      List<CExpression> pParameters, CFunctionCallExpression e) throws UnrecognizedCodeException {
-    if (pParameters.size() < 2) {
-      throw new UnrecognizedCodeException("fscanf() needs at least 2 parameters", edge, e);
+    if (pParameters.size() <= pIndex) {
+      return;
     }
-
-    if (pParameters.size() > 3) {
+    CExpression ordering = pParameters.get(pIndex);
+    if (!(ordering instanceof CIntegerLiteralExpression orderValue)
+        || !orderValue.getValue().equals(BuiltinAtomicFunctions.MEMORY_ORDER_SEQ_CST)) {
       throw new UnsupportedCodeException(
-          "fscanf() with more than 3 parameters is not supported", edge, e);
+          "Only sequentially consistent memory order (__ATOMIC_SEQ_CST) is supported, but "
+              + pOperation.getRepresentation()
+              + " uses "
+              + ordering.toASTString(),
+          edge,
+          pCall);
     }
-
-    CExpression file = pParameters.get(0);
-
-    if (file instanceof CIdExpression idExpression) {
-      if (!isFilePointer(idExpression.getExpressionType())) {
-        throw new UnrecognizedCodeException("First parameter of fscanf() must be a FILE*", edge, e);
-      }
-    }
-
-    CExpression format = pParameters.get(1);
-    String formatString =
-        checkFscanfFormatString(format)
-            .orElseThrow(
-                () ->
-                    new UnsupportedCodeException(
-                        "Format string of fscanf is not supported", edge, e));
-
-    return new ValidatedFScanFParameter(formatString, pParameters.get(2));
-  }
-
-  private boolean isFilePointer(CType pType) {
-    if (pType instanceof CPointerType pointerType) {
-      if (pointerType.getType() instanceof CTypedefType typedefType) {
-        CType realType = typedefType.getRealType();
-        if (realType instanceof CElaboratedType elaboratedType) {
-          return elaboratedType.getKind() == ComplexTypeKind.STRUCT
-              && elaboratedType.getName().equals("_IO_FILE");
-        }
-      }
-    }
-    return false;
-  }
-
-  private Optional<String> checkFscanfFormatString(CExpression pFormat) {
-    ImmutableSet<String> allowlistedFormatStrings =
-        BuiltinFunctions.getAllowedScanfFormatSpecifiers();
-    if (pFormat instanceof CStringLiteralExpression stringLiteral) {
-      String content = stringLiteral.getContentWithoutNullTerminator();
-      if (allowlistedFormatStrings.contains(content)) {
-        return Optional.of(content);
-      }
-    }
-
-    return Optional.empty();
   }
 
   private @Nullable Formula roundNearestTiesAway(
@@ -1421,11 +1592,11 @@ public class ExpressionToFormulaVisitor
 
     if (pParameters.size() == 1) {
       CType paramType = getTypeOfBuiltinFloatFunction(pFunctionName);
-      FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+      FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
         FloatingPointFormula param =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
         FloatingPointFormula zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
         FloatingPointFormula fp_half = fpfmgr.makeNumber(0.5, (FloatingPointType) formulaType);
         FloatingPointFormula fp_neg_half = fpfmgr.makeNumber(-0.5, (FloatingPointType) formulaType);
@@ -1444,8 +1615,8 @@ public class ExpressionToFormulaVisitor
         if (pIsLRound) {
           FormulaType<?> type =
               pIsLongLong
-                  ? conv.getFormulaTypeFromCType(CNumericTypes.LONG_LONG_INT)
-                  : conv.getFormulaTypeFromCType(CNumericTypes.LONG_INT);
+                  ? conv.getFormulaTypeFromType(CNumericTypes.LONG_LONG_INT)
+                  : conv.getFormulaTypeFromType(CNumericTypes.LONG_INT);
           final boolean signed = true; // LongLongInt and LongInt are signed
 
           castIntegral = fpfmgr.castTo(integral, signed, type);
@@ -1496,11 +1667,11 @@ public class ExpressionToFormulaVisitor
 
     if (pParameters.size() == 1) {
       CType paramType = getTypeOfBuiltinFloatFunction(pFunctionName);
-      FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+      FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
         FloatingPointFormula param =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
 
         FloatingPointFormula rounded = fpfmgr.round(param, pRoundingMode);
 
@@ -1531,14 +1702,14 @@ public class ExpressionToFormulaVisitor
 
     if (pParameters.size() == 2) {
       CType paramType = getTypeOfBuiltinFloatFunction(pFunctionName);
-      FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+      FormulaType<?> formulaType = conv.getFormulaTypeFromType(paramType);
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormula param0 =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
         FloatingPointFormula param1 =
             (FloatingPointFormula) processOperand(pParameters.get(1), paramType, paramType);
 
-        FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+        FormulaType<?> resultType = conv.getFormulaTypeFromType(CNumericTypes.INT);
         Formula zero = mgr.makeNumber(resultType, 0);
         Formula one = mgr.makeNumber(resultType, 1);
 
@@ -1559,9 +1730,9 @@ public class ExpressionToFormulaVisitor
   }
 
   /**
-   * Handle calls to __builtin_popcount, __builtin_popcountl, and __builtin_popcountll. Popcount
-   * sums up all 1-bits of an int, long or long long. Test c programs available:
-   * test/programs/simple/builtin_popcount32_x.c and test/programs/simple/builtin_popcount64_x.c
+   * Handle calls to __builtin_popcount(), __builtin_popcountl(), and __builtin_popcountll().
+   * Popcount sums up all 1-bits in an unsigned int, unsigned long int or unsigned long long int
+   * number given. Test C programs available at test/programs/simple/builtin_popcount*.c
    */
   private Formula handlePopCount(
       String pFunctionName,
@@ -1571,12 +1742,12 @@ public class ExpressionToFormulaVisitor
       throws UnrecognizedCodeException {
     if (pParameters.size() == 1) {
       CType paramType = BuiltinFunctions.getParameterTypeOfBuiltinPopcountFunction(pFunctionName);
-      FormulaType<?> paramFormulaType = conv.getFormulaTypeFromCType(paramType);
-      FormulaType<?> formulaReturnType = conv.getFormulaTypeFromCType(pReturnType);
+      FormulaType<?> paramFormulaType = conv.getFormulaTypeFromType(paramType);
+      FormulaType<?> formulaReturnType = conv.getFormulaTypeFromType(pReturnType);
 
       if (paramFormulaType.isBitvectorType()) {
         BitvectorFormulaManagerView bvMgrv = mgr.getBitvectorFormulaManager();
-        BitvectorFormula bvParameter = (BitvectorFormula) toFormula(pParameters.get(0));
+        BitvectorFormula bvParameter = (BitvectorFormula) toFormula(pParameters.getFirst());
         BitvectorType bvParamType = (BitvectorType) paramFormulaType;
         BitvectorType bvReturnType = (BitvectorType) formulaReturnType;
         int offset = 0;
