@@ -55,14 +55,14 @@ public class TaskRecord {
     language = pLanguage;
   }
 
-  private static String getSpecificationAsString(Specification pSpecification) throws IOException {
+  public static String getSpecificationAsString(Specification pSpecification) throws IOException {
     String defaultReturnSpecification = "";
     if (pSpecification.getFiles().size() != 1) {
       // Currently, there is no semantics for witnesses when multiple properties are checked
       return defaultReturnSpecification;
     }
 
-    Path specFile = pSpecification.getFiles().asList().get(0);
+    Path specFile = pSpecification.getFiles().asList().getFirst();
     ImmutableList<String> simplifiedSpecification =
         FluentIterable.from(Files.readAllLines(specFile, StandardCharsets.UTF_8))
             .transform(String::trim)
@@ -75,7 +75,7 @@ public class TaskRecord {
       return defaultReturnSpecification;
     }
 
-    return simplifiedSpecification.get(0);
+    return simplifiedSpecification.getFirst();
   }
 
   public static TaskRecord getTaskDescription(CFA pCFA, Specification pSpecification)
